virtual build now pointing to a different config location on claraserv3 for no_arc_testing

--- a/Config/BA1Stages.config
+++ b/Config/BA1Stages.config
@@ -44,7 +44,7 @@ NUMBER_OF_OBJECTS = 7;      For sanity checks
 
 NAME    = H1;
 STAGE_NUMBER = 1;
-PV_ROOT = EBT-BA1-MOT-COFF-H-01:;
+PV_ROOT = VM-EBT-BA1-MOT-COFF-H-01:;
 MAX_POS = 58.0;
 MIN_POS = -22.0;
 HAS_YAG = TRUE;
@@ -54,7 +54,7 @@ PRECISION = 2; number of decimal places
 
 NAME    = V1;
 STAGE_NUMBER = 2;
-PV_ROOT = EBT-BA1-MOT-COFF-V-01:;
+PV_ROOT = VM-EBT-BA1-MOT-COFF-V-01:;
 MAX_POS = 30.0;
 MIN_POS = 0.0;
 HAS_YAG = FALSE;
@@ -65,7 +65,7 @@ PRECISION = 3; number of decimal places
 ; NOT YET IN THE CONTROL SYSTEM
 ;NAME    = H2;
 ; STAGE_NUMBER = 3;
-;PV_ROOT = EBT-BA1-MOT-COFF-H-01:;
+;PV_ROOT = VM-EBT-BA1-MOT-COFF-H-01:;
 ;MAX_POS = 20.9;
 ;MIN_POS = -55.0;
 ;HAS_YAG = FALSE;
@@ -75,7 +75,7 @@ PRECISION = 3; number of decimal places
 
 NAME    = H3;
 STAGE_NUMBER = 4;
-PV_ROOT = EBT-BA1-MOT-COFF-H-03:;
+PV_ROOT = VM-EBT-BA1-MOT-COFF-H-03:;
 MAX_POS = 40.0;
 MIN_POS = -60.0;
 HAS_YAG = FALSE;
@@ -85,7 +85,7 @@ PRECISION = 2; number of decimal places
 
 NAME    = V2;
 STAGE_NUMBER = 5;
-PV_ROOT = EBT-BA1-MOT-COFF-V-02:;
+PV_ROOT = VM-EBT-BA1-MOT-COFF-V-02:;
 MAX_POS = 3.0;
 MIN_POS = -28.0;
 HAS_YAG = TRUE;
@@ -97,7 +97,7 @@ PRECISION = 3; number of decimal places
 
 NAME    = H4;
 STAGE_NUMBER = 6;
-PV_ROOT = EBT-BA1-MOT-COFF-H-04:;
+PV_ROOT = VM-EBT-BA1-MOT-COFF-H-04:;
 MAX_POS = 60.0;
 MIN_POS = -5; DO NOT touch this if EO is installed and you aren't DW or TP
 HAS_YAG = FALSE;
@@ -110,7 +110,7 @@ PRECISION = 2; number of decimal places
 
 NAME    = V4;
 STAGE_NUMBER = 7;
-PV_ROOT = EBT-BA1-MOT-COFF-V-04:;
+PV_ROOT = VM-EBT-BA1-MOT-COFF-V-04:;
 MAX_POS = 30.0;
 MIN_POS = 0.0;
 HAS_YAG = FALSE;
@@ -123,7 +123,7 @@ PRECISION = 3; number of decimal places
 
 NAME    = V5;
 STAGE_NUMBER = 8; 
-PV_ROOT = EBT-BA1-MOT-COFF-V-05:;
+PV_ROOT = VM-EBT-BA1-MOT-COFF-V-05:;
 MAX_POS = 55.0;
 MIN_POS = -10.0;
 HAS_YAG = FALSE;
