--- a/Config/C2BBeamPositionMonitors.config
+++ b/Config/C2BBeamPositionMonitors.config
@@ -93,7 +93,7 @@ NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects,
 #scop2 is the second one in the list etc.
 
 NAME    = S01-BPM01;
-PV_ROOT = CLA-S01-DIA-BPM-01:;
+PV_ROOT = VM-CLA-S01-DIA-BPM-01:;
 XY_TYPE = Y_FIRST;
 ATT1CAL = 12;
 ATT2CAL = 14;
@@ -106,7 +106,7 @@ YN      = 0;
 POSITION = 0.9377;
 
 NAME    = S02-BPM01;
-PV_ROOT = CLA-S02-DIA-BPM-01:;
+PV_ROOT = VM-CLA-S02-DIA-BPM-01:;
 XY_TYPE = Y_FIRST;
 ATT1CAL = 12; 12;
 ATT2CAL = 12; 11;
@@ -119,7 +119,7 @@ YN      = 0;
 POSITION = 3.6228;
 
 NAME    = S02-BPM02;
-PV_ROOT = CLA-S02-DIA-BPM-02:;
+PV_ROOT = VM-CLA-S02-DIA-BPM-02:;
 XY_TYPE = Y_FIRST;
 ATT1CAL = 12;
 ATT2CAL = 12;
@@ -132,7 +132,7 @@ YN      = 0;
 POSITION = 6.54; Edited by JKJ as it's completely wrong.;11.624; Length of C2V and SP1 line (5.172m) added on to put QUAD05 after it
 
 NAME    = C2V-BPM01;
-PV_ROOT = CLA-C2V-DIA-BPM-01:;
+PV_ROOT = VM-CLA-C2V-DIA-BPM-01:;
 XY_TYPE = Y_FIRST;
 ATT1CAL = 12;
 ATT2CAL = 12;
@@ -145,7 +145,7 @@ YN      = 0;
 POSITION = 6.406;
 
 NAME    = INJ-BPM03;
-PV_ROOT = EBT-INJ-DIA-BPM-03:;
+PV_ROOT = VM-EBT-INJ-DIA-BPM-03:;
 XY_TYPE = X_FIRST;
 ATT1CAL = 9;
 ATT2CAL = 7;
@@ -158,7 +158,7 @@ YN      = 0;
 POSITION = 8.462;
 
 NAME    = INJ-BPM04;
-PV_ROOT = EBT-INJ-DIA-BPM-04:;
+PV_ROOT = VM-EBT-INJ-DIA-BPM-04:;
 XY_TYPE = X_FIRST;
 ATT1CAL = 9;
 ATT2CAL = 9;
@@ -171,7 +171,7 @@ YN      = 0;
 POSITION = 10.658;
 
 NAME    = INJ-BPM05;
-PV_ROOT = EBT-INJ-DIA-BPM-05:;
+PV_ROOT = VM-EBT-INJ-DIA-BPM-05:;
 XY_TYPE = X_FIRST;
 ATT1CAL = 7;7;
 ATT2CAL = 7;8;
@@ -184,7 +184,7 @@ YN      = 0;
 POSITION = 14.012;
 
 NAME    = INJ-BPM06;
-PV_ROOT = EBT-INJ-DIA-BPM-06:;
+PV_ROOT = VM-EBT-INJ-DIA-BPM-06:;
 XY_TYPE = X_FIRST;
 ATT1CAL = 4;
 ATT2CAL = 6;
@@ -197,7 +197,7 @@ YN      = 0;
 POSITION = 17.072;  Added length of SP1+BA2 lines to get things in the right order
 
 NAME    = BA1-BPM01;
-PV_ROOT = EBT-BA1-DIA-BPM-01:;
+PV_ROOT = VM-EBT-BA1-DIA-BPM-01:;
 XY_TYPE = X_FIRST;
 ATT1CAL = 6;
 ATT2CAL = 6;
@@ -210,7 +210,7 @@ YN      = 0;
 POSITION = 17.072;  Added length of SP1+BA2 lines to get things in the right order
 
 NAME    = BA1-BPM02;
-PV_ROOT = EBT-BA1-DIA-BPM-02:;
+PV_ROOT = VM-EBT-BA1-DIA-BPM-02:;
 XY_TYPE = X_FIRST;
 ATT1CAL = 8;
 ATT2CAL = 8;
@@ -223,7 +223,7 @@ YN      = 0;
 POSITION = 17.072;  Added length of SP1+BA2 lines to get things in the right order
 
 NAME    = BA1-BPM03;
-PV_ROOT = EBT-BA1-DIA-BPM-03:;
+PV_ROOT = VM-EBT-BA1-DIA-BPM-03:;
 XY_TYPE = X_FIRST;
 ATT1CAL = 6;
 ATT2CAL = 6;
@@ -236,7 +236,7 @@ YN      = 0;
 POSITION = 17.072;  Added length of SP1+BA2 lines to get things in the right order
 
 NAME    = BA1-BPM04;
-PV_ROOT = EBT-BA1-DIA-BPM-04:;
+PV_ROOT = VM-EBT-BA1-DIA-BPM-04:;
 XY_TYPE = X_FIRST;
 ATT1CAL = 3;
 ATT2CAL = 3;
