--- a/Config/C2BScreens.config
+++ b/Config/C2BScreens.config
@@ -228,7 +228,7 @@ NUMBER_OF_ILOCKS = 0;		#If the number of interlocks changes between objects, the
 #however it solved the problem of the program not subscribing to the chids in the new version.
 
 NAME = S01-SCR-01;
-PV_ROOT = CLA-S01-DIA-SCR-01:;
+PV_ROOT = VM-CLA-S01-DIA-SCR-01:;
 SCREEN_TYPE = CLARA_HV_MOVER;
 V_RETRACTED = 0;
 V_RETRACTED_POS = 0;
@@ -258,7 +258,7 @@ POSITION = 0.9810;
 SCREEN_HAS_CAM = TRUE;
 
 NAME = S02-SCR-01;
-PV_ROOT = CLA-S02-DIA-SCR-01:;
+PV_ROOT = VM-CLA-S02-DIA-SCR-01:;
 SCREEN_TYPE = CLARA_HV_MOVER;
 V_RETRACTED = 0;
 V_RETRACTED_POS = 0;
@@ -278,7 +278,7 @@ POSITION = 4.0899;
 SCREEN_HAS_CAM = TRUE;
 
 NAME = S02-SCR-02;
-PV_ROOT = CLA-S02-DIA-SCR-02:;
+PV_ROOT = VM-CLA-S02-DIA-SCR-02:;
 SCREEN_TYPE = CLARA_V_MOVER;
 V_RETRACTED = 0;
 V_RETRACTED_POS = 0;
@@ -292,7 +292,7 @@ POSITION = 5.0108;
 SCREEN_HAS_CAM = TRUE;
 
 NAME = S02-SCR-03;
-PV_ROOT = CLA-S02-DIA-SCR-03:;
+PV_ROOT = VM-CLA-S02-DIA-SCR-03:;
 SCREEN_TYPE = CLARA_V_MOVER;
 V_RETRACTED = 0;
 V_RETRACTED_POS = 0;
@@ -306,7 +306,7 @@ POSITION = 6.58;
 SCREEN_HAS_CAM = TRUE;
 
 NAME = C2V-SCR-01;
-PV_ROOT = CLA-C2V-DIA-SCR-01:;
+PV_ROOT = VM-CLA-C2V-DIA-SCR-01:;
 SCREEN_TYPE = CLARA_V_MOVER;
 V_RETRACTED = 0;
 V_RETRACTED_POS = 0;
@@ -320,7 +320,7 @@ POSITION = 6.0108;
 SCREEN_HAS_CAM = TRUE;
 
 NAME = INJ-SCR-04;
-PV_ROOT = EBT-INJ-DIA-YAG-04:;
+PV_ROOT = VM-EBT-INJ-DIA-YAG-04:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
@@ -329,7 +329,7 @@ YAG_POS = 148.5;
 SCREEN_HAS_CAM = TRUE;
 
 NAME = INJ-SCR-05;
-PV_ROOT = EBT-INJ-DIA-YAG-05:;
+PV_ROOT = VM-EBT-INJ-DIA-YAG-05:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
@@ -338,7 +338,7 @@ YAG_POS = 148.5;
 SCREEN_HAS_CAM = TRUE;
 
 NAME = INJ-SCR-06;
-PV_ROOT = EBT-INJ-DIA-YAG-06:;
+PV_ROOT = VM-EBT-INJ-DIA-YAG-06:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
@@ -347,7 +347,7 @@ YAG_POS = 148.5;
 SCREEN_HAS_CAM = TRUE;
 
 NAME = INJ-SCR-07;
-PV_ROOT = EBT-INJ-DIA-YAG-07:;
+PV_ROOT = VM-EBT-INJ-DIA-YAG-07:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
@@ -356,7 +356,7 @@ YAG_POS = 148.5;
 SCREEN_HAS_CAM = TRUE;
 
 NAME = INJ-SCR-08;
-PV_ROOT = EBT-INJ-DIA-YAG-08:;
+PV_ROOT = VM-EBT-INJ-DIA-YAG-08:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
@@ -365,7 +365,7 @@ YAG_POS = 148.5;
 SCREEN_HAS_CAM = TRUE;
 
 NAME = INJ-SCR-09;
-PV_ROOT = EBT-INJ-DIA-YAG-09:;
+PV_ROOT = VM-EBT-INJ-DIA-YAG-09:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
@@ -374,7 +374,7 @@ YAG_POS = 148.5;
 SCREEN_HAS_CAM = TRUE;
 
 NAME = INJ-SCR-10;
-PV_ROOT = EBT-INJ-DIA-YAG-10:;
+PV_ROOT = VM-EBT-INJ-DIA-YAG-10:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
@@ -383,7 +383,7 @@ YAG_POS = 148.5;
 SCREEN_HAS_CAM = TRUE;
 
 NAME = BA1-SCR-01;
-PV_ROOT = EBT-BA1-DIA-YAG-01:;
+PV_ROOT = VM-EBT-BA1-DIA-YAG-01:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
@@ -392,7 +392,7 @@ YAG_POS = 148.5;
 SCREEN_HAS_CAM = TRUE;
 
 NAME = BA1-SCR-02;
-PV_ROOT = EBT-BA1-DIA-YAG-02:;
+PV_ROOT = VM-EBT-BA1-DIA-YAG-02:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
@@ -401,7 +401,7 @@ YAG_POS = 148.5;
 SCREEN_HAS_CAM = TRUE;
 
 NAME = BA1-SCR-03;
-PV_ROOT = EBT-BA1-DIA-YAG-03:;
+PV_ROOT = VM-EBT-BA1-DIA-YAG-03:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
