--- a/Config/allCam.config
+++ b/Config/allCam.config
@@ -619,7 +619,7 @@ NUMBER_OF_ILOCKS  = 0; If the number of interlocks changes between objects, then
 ;BINARY_NUM_PIX_X = 2160;
 ;
 ;NAME    = CAM02;
-;PV_ROOT = EBT-INJ-DIA-CAM-02:;
+;PV_ROOT = VM-EBT-INJ-DIA-CAM-02:;
 ;CAM_TYPE = CLARA_CAM;
 ;SCREEN_NAME  = INJ-SCR-01;
 ;X_MASK_DEF   = 0;
@@ -636,7 +636,7 @@ NUMBER_OF_ILOCKS  = 0; If the number of interlocks changes between objects, then
 ;
 ;
 ;NAME    = CAM12;
-;PV_ROOT = EBT-INJ-DIA-CAM-12:;
+;PV_ROOT = VM-EBT-INJ-DIA-CAM-12:;
 ;SCREEN_NAME = BA1-SCR-01;
 ;CAM_TYPE = CLARA_CAM;
 ;X_MASK_DEF   = 0;
@@ -652,7 +652,7 @@ NUMBER_OF_ILOCKS  = 0; If the number of interlocks changes between objects, then
 ;MAX_SHOTS_NUMBER		= 600;
 ;
 NAME    = CAM13;
-PV_ROOT = EBT-INJ-DIA-CAM-13:;
+PV_ROOT = VM-EBT-INJ-DIA-CAM-13:;
 SCREEN_NAME  = BA1-SCR-02;
 CAM_TYPE = CLARA_CAM;
 X_MASK_DEF   = 0;
@@ -668,7 +668,7 @@ ARRAY_DATA_Y_PIX_2_MM = 0.0;
 MAX_SHOTS_NUMBER		= 600;
 ;
 ;NAME    = CAM14;
-;PV_ROOT = EBT-INJ-DIA-CAM-14:;
+;PV_ROOT = VM-EBT-INJ-DIA-CAM-14:;
 ;SCREEN_NAME  = BA1-SCR-03;
 ;CAM_TYPE = CLARA_CAM;
 ;X_MASK_DEF   = 0;
@@ -685,7 +685,7 @@ MAX_SHOTS_NUMBER		= 600;
 ;
 ;
 ;NAME    = CAM17;
-;PV_ROOT = EBT-INJ-DIA-CAM-17:;
+;PV_ROOT = VM-EBT-INJ-DIA-CAM-17:;
 ;SCREEN_NAME  = BA1-COFF-01;
 ;CAM_TYPE = CLARA_CAM;
 ;X_MASK_DEF   = 0;
@@ -701,7 +701,7 @@ MAX_SHOTS_NUMBER		= 600;
 ;MAX_SHOTS_NUMBER		= 600;
 ;
 ;NAME    = CAM18;
-;PV_ROOT = EBT-INJ-DIA-CAM-18:;
+;PV_ROOT = VM-EBT-INJ-DIA-CAM-18:;
 ;SCREEN_NAME  = BA1-COFF-02;
 ;CAM_TYPE = CLARA_CAM;
 ;X_MASK_DEF   = 0;
@@ -717,7 +717,7 @@ MAX_SHOTS_NUMBER		= 600;
 ;MAX_SHOTS_NUMBER		= 600;
 ;
 ;NAME    = CAM19;
-;PV_ROOT = EBT-INJ-DIA-CAM-19:;
+;PV_ROOT = VM-EBT-INJ-DIA-CAM-19:;
 ;SCREEN_NAME  = BA1-COFF-03;
 ;CAM_TYPE = CLARA_CAM;
 ;X_MASK_DEF   = 0;
@@ -733,7 +733,7 @@ MAX_SHOTS_NUMBER		= 600;
 ;MAX_SHOTS_NUMBER		= 600;
 ;
 ;NAME    = CAM20;
-;PV_ROOT = EBT-INJ-DIA-CAM-20:;
+;PV_ROOT = VM-EBT-INJ-DIA-CAM-20:;
 ;SCREEN_NAME  = BA1-COFF-04;
 ;CAM_TYPE = CLARA_CAM;
 ;X_MASK_DEF   = 0;
@@ -750,7 +750,7 @@ MAX_SHOTS_NUMBER		= 600;
 ;
 ;
 ;NAME    = CAM03;
-;PV_ROOT = EBT-INJ-DIA-CAM-03:;
+;PV_ROOT = VM-EBT-INJ-DIA-CAM-03:;
 ;;CAM_TYPE = VELA_CLARA_HYBRID;
 ;CAM_TYPE = CLARA_CAM;
 ;SCREEN_NAME  = INJ-SCR-02;
@@ -769,7 +769,7 @@ MAX_SHOTS_NUMBER		= 600;
 ;
 ;
 ;NAME    = CAM04;
-;PV_ROOT = EBT-INJ-DIA-CAM-04:;
+;PV_ROOT = VM-EBT-INJ-DIA-CAM-04:;
 ;;CAM_TYPE = VELA_CLARA_HYBRID;
 ;CAM_TYPE = CLARA_CAM;
 ;SCREEN_NAME  = INJ-SCR-03;
@@ -786,7 +786,7 @@ MAX_SHOTS_NUMBER		= 600;
 ;MAX_SHOTS_NUMBER =600;
 ;
 ;NAME    = CAM05;
-;PV_ROOT = EBT-INJ-DIA-CAM-05:;
+;PV_ROOT = VM-EBT-INJ-DIA-CAM-05:;
 ;SCREEN_NAME  = INJ-SCR-04;
 ;;CAM_TYPE = VELA_CLARA_HYBRID;
 ;CAM_TYPE = CLARA_CAM;
@@ -804,7 +804,7 @@ MAX_SHOTS_NUMBER		= 600;
 ;
 ;
 ;NAME    = CAM06;
-;PV_ROOT = EBT-INJ-DIA-CAM-06:;
+;PV_ROOT = VM-EBT-INJ-DIA-CAM-06:;
 ;SCREEN_NAME  = INJ-SCR-05;
 ;;CAM_TYPE = VELA_CLARA_HYBRID;
 ;CAM_TYPE = CLARA_CAM;
@@ -821,7 +821,7 @@ MAX_SHOTS_NUMBER		= 600;
 ;MAX_SHOTS_NUMBER =600;
 ;
 ;NAME    = CAM07;
-;PV_ROOT = EBT-INJ-DIA-CAM-07:;
+;PV_ROOT = VM-EBT-INJ-DIA-CAM-07:;
 ;SCREEN_NAME  = INJ-SCR-06;
 ;;CAM_TYPE = VELA_CLARA_HYBRID;
 ;CAM_TYPE = CLARA_CAM;
@@ -839,7 +839,7 @@ MAX_SHOTS_NUMBER		= 600;
 ;
 ;
 ;NAME    = CAM08;
-;PV_ROOT = EBT-INJ-DIA-CAM-08:;
+;PV_ROOT = VM-EBT-INJ-DIA-CAM-08:;
 ;SCREEN_NAME  = INJ-SCR-07;
 ;;CAM_TYPE = VELA_CLARA_HYBRID;
 ;CAM_TYPE = CLARA_CAM;
@@ -857,7 +857,7 @@ MAX_SHOTS_NUMBER		= 600;
 ;
 ;
 ;NAME    = CAM09;
-;PV_ROOT = EBT-INJ-DIA-CAM-09:;
+;PV_ROOT = VM-EBT-INJ-DIA-CAM-09:;
 ;SCREEN_NAME  = ELECTRON_DIFFRACTION;
 ;;CAM_TYPE = VELA_CLARA_HYBRID;
 ;CAM_TYPE = CLARA_CAM;
@@ -880,7 +880,7 @@ MAX_SHOTS_NUMBER		= 600;
 ;
 ;
 ;NAME    = CAM10;
-;PV_ROOT = EBT-INJ-DIA-CAM-10:;
+;PV_ROOT = VM-EBT-INJ-DIA-CAM-10:;
 ;SCREEN_NAME  = INJ-SCR-08;
 ;;CAM_TYPE = VELA_CLARA_HYBRID;
 ;CAM_TYPE = CLARA_CAM;
@@ -898,7 +898,7 @@ MAX_SHOTS_NUMBER		= 600;
 ;
 ;
 ;NAME    = CAM11;
-;PV_ROOT = EBT-INJ-DIA-CAM-11:;
+;PV_ROOT = VM-EBT-INJ-DIA-CAM-11:;
 ;SCREEN_NAME  = INJ-SCR-09;
 ;;CAM_TYPE = VELA_CLARA_HYBRID;
 ;CAM_TYPE = CLARA_CAM;
@@ -915,7 +915,7 @@ MAX_SHOTS_NUMBER		= 600;
 ;MAX_SHOTS_NUMBER =600;
 ;
 ;NAME    = CAM15;
-;PV_ROOT = EBT-INJ-DIA-CAM-15:;
+;PV_ROOT = VM-EBT-INJ-DIA-CAM-15:;
 ;SCREEN_NAME  = BA2-SCR-01;
 ;;CAM_TYPE = VELA_CLARA_HYBRID;
 ;CAM_TYPE = CLARA_CAM;
@@ -932,7 +932,7 @@ MAX_SHOTS_NUMBER		= 600;
 ;MAX_SHOTS_NUMBER =600;
 
 ;NAME    = CAM16;
-;PV_ROOT = EBT-INJ-DIA-CAM-16:;
+;PV_ROOT = VM-EBT-INJ-DIA-CAM-16:;
 ;SCREEN_NAME  = INJ-SCR-10;
 ;CAM_TYPE = VELA_CLARA_HYBRID;
 ;CAM_TYPE = CLARA_CAM;
