--- a/Config/allCharge.config
+++ b/Config/allCharge.config
@@ -32,19 +32,19 @@ NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects,
 #scop2 is the second one in the list etc.
 
 NAME    = WCM;
-PV_ROOT = CLA-S01-DIA-WCM-01;
+PV_ROOT = VM-CLA-S01-DIA-WCM-01;
 DIAG_TYPE = WCM;
 
 NAME    = S02-FCUP;
-PV_ROOT = CLA-S02-DIA-FCUP-01;
+PV_ROOT = VM-CLA-S02-DIA-FCUP-01;
 DIAG_TYPE = S02-FCUP;
 
 NAME    = SP1-FCUP;
-PV_ROOT = EBT-SP1-DIA-FCUP-01;
+PV_ROOT = VM-EBT-SP1-DIA-FCUP-01;
 DIAG_TYPE = SP1-FCUP;
 
 NAME    = BA1-FCUP;
-PV_ROOT = EBT-BA1-DIA-FCUP-01;
+PV_ROOT = VM-EBT-BA1-DIA-FCUP-01;
 DIAG_TYPE = BA1-FCUP;
 
 END_OF_DATA;
