--- a/Config/allVacuumValve.config
+++ b/Config/allVacuumValve.config
@@ -35,49 +35,49 @@ NUMBER_OF_OBJECTS = 15;      For sanity checks
 ;NUMBER_OF_ILOCKS  = 7;      If the number of interlocks changes between objects, then redefine this before the "name" paramater
 
 NAME    = S01-VALV1;
-PV_ROOT = CLA-S01-VAC-VALV-01:;
+PV_ROOT = VM-CLA-S01-VAC-VALV-01:;
 
 NAME    = S02-VALV1;
-PV_ROOT = CLA-S02-VAC-VALV-01:;
+PV_ROOT = VM-CLA-S02-VAC-VALV-01:;
 
 NAME    = C2V-VALV1;
-PV_ROOT = CLA-C2V-VAC-VALV-01:;
+PV_ROOT = VM-CLA-C2V-VAC-VALV-01:;
 
 NAME    = LAS-VALV1;
-PV_ROOT = CLA-LAS-VAC-VALV-01:;
+PV_ROOT = VM-CLA-LAS-VAC-VALV-01:;
 
 NAME    = LAS-VALV2;
-PV_ROOT = CLA-LAS-VAC-VALV-02:;
+PV_ROOT = VM-CLA-LAS-VAC-VALV-02:;
 
 NAME    = INJ-VALV1;
-PV_ROOT = EBT-INJ-VAC-VALV-01:;
+PV_ROOT = VM-EBT-INJ-VAC-VALV-01:;
 
 NAME    = INJ-VALV5;
-PV_ROOT = EBT-INJ-VAC-VALV-05:;
+PV_ROOT = VM-EBT-INJ-VAC-VALV-05:;
 
 NAME    = INJ-VALV6;
-PV_ROOT = EBT-INJ-VAC-VALV-06:;
+PV_ROOT = VM-EBT-INJ-VAC-VALV-06:;
 
 NAME    = INJ-VALV3;
-PV_ROOT = EBT-INJ-VAC-VALV-03:;
+PV_ROOT = VM-EBT-INJ-VAC-VALV-03:;
 
 NAME    = INJ-VALV7;
-PV_ROOT = EBT-INJ-VAC-VALV-07:;
+PV_ROOT = VM-EBT-INJ-VAC-VALV-07:;
 
 NAME    = BA1-VALV1;
-PV_ROOT = EBT-BA1-VAC-VALV-01:;
+PV_ROOT = VM-EBT-BA1-VAC-VALV-01:;
 
 NAME    = BA1-VALV2;
-PV_ROOT = EBT-BA1-VAC-VALV-02:;
+PV_ROOT = VM-EBT-BA1-VAC-VALV-02:;
 
 NAME    = BA1-VALV3;
-PV_ROOT = EBT-BA1-VAC-VALV-03:;
+PV_ROOT = VM-EBT-BA1-VAC-VALV-03:;
 
 NAME    = BA1-VALV4;
-PV_ROOT = EBT-BA1-VAC-VALV-04:;
+PV_ROOT = VM-EBT-BA1-VAC-VALV-04:;
 
 NAME    = BA1-VALV5;
-PV_ROOT = EBT-BA1-VAC-VALV-05:;
+PV_ROOT = VM-EBT-BA1-VAC-VALV-05:;
 
 
 END_OF_DATA;
