--- a/Config/cameraIA.config
+++ b/Config/cameraIA.config
@@ -83,7 +83,7 @@ NUMBER_OF_ILOCKS  = 0;  If the number of interlocks changes between objects, the
 
 
 NAME    = VC;
-PV_ROOT = CL-EA-DET-01:;
+PV_ROOT = VM-CL-EA-DET-01:;
 SCREEN_PV  = YAG01;
 this is the center of the beam and can be calibrated by when commissioning
 and with the radial mask values (might need these here or lower down)
@@ -99,7 +99,7 @@ IMAGE_WIDTH = 2560;
 IMAGE_HEIGHT = 2160;
 
 NAME    = CAM01;
-PV_ROOT = CL-EA-DET-01:;
+PV_ROOT = VM-CL-EA-DET-01:;
 SCREEN_PV  = YAG02;
 this is the center of the beam and can be calibrated by when commissioning
 and with the radial mask values (might need these here or lower down)
