--- a/Config/claraBLM.config
+++ b/Config/claraBLM.config
@@ -63,6 +63,6 @@ NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects,
 #scop2 is the second one in the list etc.
 
 NAME    = CLARABLM01;
-PV_ROOT = CLA-C09-IOC-CS-05;
+PV_ROOT = VM-CLA-C09-IOC-CS-05;
 
 END_OF_DATA;
