--- a/Config/claraINJMagnets.config
+++ b/Config/claraINJMagnets.config
@@ -53,7 +53,7 @@ NUMBER_OF_ILOCKS  = 0; ??? Most have 6 or 8 (but not the BSOL). Redefine before 
 NAME = BSOL;
 POSITION = -0.072; longitudinal position along the lattice (in metres) - used to define magnet order
 MANUFACTURER = Danfysik;
-PV_ROOT = CLA-GUN-MAG-SOL-01:;
+PV_ROOT = VM-CLA-GUN-MAG-SOL-01:;
 PV_PSU_ROOT = CLA-GUN-MAG-SOL-01:; ???
 MAG_TYPE = BSOL;
 MAG_REV_TYPE = BIPOLAR; ???
@@ -69,7 +69,7 @@ NAME = SOL;
 POSITION = 0.127;
 MANUFACTURER = SEF;
 SERIAL_NUMBER = 01;
-PV_ROOT = CLA-GUN-MAG-SOL-02:;
+PV_ROOT = VM-CLA-GUN-MAG-SOL-02:;
 MAG_TYPE = SOL;
 MAG_REV_TYPE = NR; ???
 RI_TOLERANCE = 0.1; ???
@@ -82,7 +82,7 @@ NAME = LIN01SOL01; ???
 POSITION = 0.281;
 MANUFACTURER = Efremov Institute;
 SERIAL_NUMBER = 08;
-PV_ROOT = CLA-L01-MAG-SOL-01:;
+PV_ROOT = VM-CLA-L01-MAG-SOL-01:;
 MAG_TYPE = SOL;
 MAG_REV_TYPE = NR; ???
 RI_TOLERANCE = 0.1; ???
@@ -95,7 +95,7 @@ NAME = LIN01SOL02; ???
 POSITION = 0.587;
 MANUFACTURER = Efremov Institute;
 SERIAL_NUMBER = 09;
-PV_ROOT = CLA-L01-MAG-SOL-02:;
+PV_ROOT = VM-CLA-L01-MAG-SOL-02:;
 MAG_TYPE = SOL;
 MAG_REV_TYPE = NR; ???
 RI_TOLERANCE = 0.1; ???
@@ -118,7 +118,7 @@ SERIAL_NUMBER = 13258;
 FIELD_INTEGRAL_COEFFICIENTS = 0.023624156190865, 0.00354362342862975;
 MAGNETIC_LENGTH = 131.245312171472;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";
-PV_ROOT = CLA-S01-MAG-HCOR-01:;
+PV_ROOT = VM-CLA-S01-MAG-HCOR-01:;
 PV_PSU_ROOT = CLA-S01-MAG-HVCOR-01:; ???
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
@@ -135,7 +135,7 @@ SERIAL_NUMBER = 13259;
 FIELD_INTEGRAL_COEFFICIENTS = 0.0234042553191489, 0.0;
 MAGNETIC_LENGTH = 125;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";
-PV_ROOT = CLA-S01-MAG-HCOR-02:;
+PV_ROOT = VM-CLA-S01-MAG-HCOR-02:;
 PV_PSU_ROOT = CLA-S01-MAG-HVCOR-02:; ???
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
@@ -156,7 +156,7 @@ MANUFACTURER = Danfysik;
 SERIAL_NUMBER = 13258;
 FIELD_INTEGRAL_COEFFICIENTS = 0.0231571709981465, 0.00347357564972197;
 MAGNETIC_LENGTH = 128.650949989703;
-MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";PV_ROOT = CLA-S01-MAG-VCOR-01:;
+MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";PV_ROOT = VM-CLA-S01-MAG-VCOR-01:;
 PV_PSU_ROOT = CLA-S01-MAG-HVCOR-01:; ???
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
@@ -172,7 +172,7 @@ MANUFACTURER = Danfysik;
 SERIAL_NUMBER = 13259;
 FIELD_INTEGRAL_COEFFICIENTS = 0.0234042553191489, 0.0;
 MAGNETIC_LENGTH = 125;
-MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";PV_ROOT = CLA-S01-MAG-VCOR-02:;
+MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";PV_ROOT = VM-CLA-S01-MAG-VCOR-02:;
 PV_PSU_ROOT = CLA-S01-MAG-HVCOR-02:; ???
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
