--- a/Config/claraL01Modulator.config
+++ b/Config/claraL01Modulator.config
@@ -18,7 +18,7 @@ NUMBER_OF_OBJECTS = 1;
 NUMBER_OF_ILOCKS  = 0;  Most have 6 or 8 (but not the BSOL). Redefine before the "NAME" paramater"
 
 NAME = L01-MOD;
-PV_ROOT = CLA-L01-HRF-MOD-01:;
+PV_ROOT = VM-CLA-L01-HRF-MOD-01:;
 
 PV_COMMANDS_START;              
 
