--- a/Config/claraPH1BeamPositionMonitors.config
+++ b/Config/claraPH1BeamPositionMonitors.config
@@ -83,7 +83,7 @@ NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects,
 #scop2 is the second one in the list etc.
 
 NAME    = S01-BPM01;
-PV_ROOT = CLA-S01-DIA-BPM-01:;
+PV_ROOT = VM-CLA-S01-DIA-BPM-01:;
 XY_TYPE = Y_FIRST;
 ATT1CAL = 9; 13;
 ATT2CAL = 11; 15;
@@ -96,7 +96,7 @@ YN      = 0;
 POSITION = 0.9377;
 
 NAME    = S02-BPM01;
-PV_ROOT = CLA-S02-DIA-BPM-01:;
+PV_ROOT = VM-CLA-S02-DIA-BPM-01:;
 XY_TYPE = Y_FIRST;
 ATT1CAL = 7; 12;
 ATT2CAL = 7; 11;
@@ -109,7 +109,7 @@ YN      = 0;
 POSITION = 3.6228;
 
 NAME    = S02-BPM02;
-PV_ROOT = CLA-S02-DIA-BPM-02:;
+PV_ROOT = VM-CLA-S02-DIA-BPM-02:;
 XY_TYPE = Y_FIRST;
 ATT1CAL = 12;
 ATT2CAL = 12;
@@ -122,7 +122,7 @@ YN      = 0;
 POSITION = 6.5369;
 
 NAME    = C2V-BPM01;
-PV_ROOT = CLA-C2V-DIA-BPM-01:;
+PV_ROOT = VM-CLA-C2V-DIA-BPM-01:;
 XY_TYPE = Y_FIRST;
 ATT1CAL = 12;
 ATT2CAL = 9;
