--- a/Config/claraPH1Magnets.config
+++ b/Config/claraPH1Magnets.config
@@ -62,7 +62,7 @@ NUMBER_OF_ILOCKS  = 0;  Most have 6 or 8 (but not the BSOL). Redefine before the
 NAME = LRG-BSOL;
 POSITION = -0.072;
 MANUFACTURER = Danfysik;
-PV_ROOT = CLA-LRG1-MAG-BSOL-01:  ;
+PV_ROOT = VM-CLA-LRG1-MAG-BSOL-01:  ;
 MAG_TYPE = BSOL;
 #Magneticlength and coeffs copied from velaINJMagnet.config#
 FIELD_INTEGRAL_COEFFICIENTS = 0.000513431, -1.27695E-07, 1.61655E-10, -0.032733798, -4.29885E-06, 2.28967E-08, 0.001833327, -2.5354E-06, -1.04715E-09, -1.61177E-12, -2.94837E-05, 2.13938E-07,  -0.003957362, 0.246073139, -4.393602393, 0.0;
@@ -77,7 +77,7 @@ NAME = LRG-SOL;
 POSITION = 0.127;
 MANUFACTURER = SEF;
 SERIAL_NUMBER = 01;
-PV_ROOT = CLA-GUN-MAG-SOL-02:;
+PV_ROOT = VM-CLA-GUN-MAG-SOL-02:;
 MAG_TYPE = SOL;
 #Magneticlength and coefs copied from velaINJMagnet.config#
 FIELD_INTEGRAL_COEFFICIENTS = 2.17321571, -0.858179277, 0.172127130, -0.0171033399, 6.70371530e-04,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
@@ -93,7 +93,7 @@ NAME = L01-SOL1;
 POSITION = 1.64; estimated from schematic
 MANUFACTURER = "Efremov Institute";
 SERIAL_NUMBER = 08;
-PV_ROOT = CLA-L01-MAG-SOL-01:;
+PV_ROOT = VM-CLA-L01-MAG-SOL-01:;
 MAG_TYPE = SOL;
 ;                             coeff_a for Larmor angle .................................................; coeff_b for integrated field
 ;                                       I,           p*I,        p**2*I,          p**3*I,         p**4*I; I**3, I**2,             I,           1
@@ -111,7 +111,7 @@ NAME = L01-SOL2;
 POSITION = 2.70; estimated from schematic
 MANUFACTURER = "Efremov Institute";
 SERIAL_NUMBER = 09;
-PV_ROOT = CLA-L01-MAG-SOL-02:;
+PV_ROOT = VM-CLA-L01-MAG-SOL-02:;
 MAG_TYPE = SOL;
 ;                             coeff_a for Larmor angle .................................................; coeff_b for integrated field
 ;                                       I,           p*I,        p**2*I,          p**3*I,         p**4*I; I**3, I**2,             I,           1
@@ -129,7 +129,7 @@ MAG_MAX_I = 200;
 //quads
 
 NAME = S02-QUAD1;
-PV_ROOT = CLA-S02-MAG-QUAD-01:;
+PV_ROOT = VM-CLA-S02-MAG-QUAD-01:;
 MAG_TYPE = QUAD;
 POSITION = 3.577500313;
 MANUFACTURER = Danfysik;
@@ -145,7 +145,7 @@ MAG_MIN_I = -54;
 MAG_MAX_I = 54;
 
 NAME = S02-QUAD2;
-PV_ROOT = CLA-S02-MAG-QUAD-02:;
+PV_ROOT = VM-CLA-S02-MAG-QUAD-02:;
 MAG_TYPE = QUAD;
 POSITION = 3.977500313;
 MANUFACTURER = Danfysik;
@@ -161,7 +161,7 @@ MAG_MIN_I = -54;
 MAG_MAX_I = 54;
 
 NAME = S02-QUAD3;
-PV_ROOT = CLA-S02-MAG-QUAD-03:;
+PV_ROOT = VM-CLA-S02-MAG-QUAD-03:;
 MAG_TYPE = QUAD;
 POSITION = 5.277500313;
 MANUFACTURER = Danfysik;
@@ -177,7 +177,7 @@ MAG_MIN_I = -54;
 MAG_MAX_I = 54;
 
 NAME = S02-QUAD4;
-PV_ROOT = CLA-S02-MAG-QUAD-04:;
+PV_ROOT = VM-CLA-S02-MAG-QUAD-04:;
 MAG_TYPE = QUAD;
 POSITION = 5.677500313;
 MANUFACTURER = Danfysik;
@@ -193,7 +193,7 @@ MAG_MIN_I = -54;
 MAG_MAX_I = 54;
 
 NAME = S02-QUAD5;
-PV_ROOT = CLA-S02-MAG-QUAD-05:;
+PV_ROOT = VM-CLA-S02-MAG-QUAD-05:;
 MAG_TYPE = QUAD;
 POSITION = 11.66280268; Length of C2V and SP1 line added on to put QUAD05 after it
 MANUFACTURER = Danfysik;
@@ -210,7 +210,7 @@ MAG_MAX_I = 54;
 
 
 NAME = C2V-QUAD1;
-PV_ROOT = CLA-C2V-MAG-QUAD-01:;
+PV_ROOT = VM-CLA-C2V-MAG-QUAD-01:;
 MAG_TYPE = QUAD;
 POSITION = 6.660148145;
 MANUFACTURER = Danfysik;
@@ -227,7 +227,7 @@ MAG_MAX_I = 200;
 MAGNET_BRANCH = DIP01;
 
 NAME = C2V-QUAD2;
-PV_ROOT = CLA-C2V-MAG-QUAD-02:;
+PV_ROOT = VM-CLA-C2V-MAG-QUAD-02:;
 MAG_TYPE = QUAD;
 POSITION = 6.950148145;
 MANUFACTURER = Danfysik;
@@ -244,7 +244,7 @@ MAG_MAX_I = 200;
 MAGNET_BRANCH = DIP01;
 
 NAME = C2V-QUAD3;
-PV_ROOT = CLA-C2V-MAG-QUAD-03:;
+PV_ROOT = VM-CLA-C2V-MAG-QUAD-03:;
 MAG_TYPE = QUAD;
 POSITION = 7.240148145;
 MANUFACTURER = Danfysik;
@@ -264,7 +264,7 @@ MAGNET_BRANCH = DIP01;
 // hv_corrs
 
 NAME = S01-HCOR1;
-PV_ROOT = CLA-S01-MAG-HCOR-01:;
+PV_ROOT = VM-CLA-S01-MAG-HCOR-01:;
 MAG_TYPE = HCOR;
 POSITION = 0.35482; From here on in the positions are taken from PHW's layout CSV (CLA-EBT_V10_layout.csv)
 MANUFACTURER = Danfysik;
@@ -280,14 +280,14 @@ MAG_MIN_I = -5;
 MAG_MAX_I = 5;
 
 NAME = S01-VCOR1;
-PV_ROOT = CLA-S01-MAG-VCOR-01:;
+PV_ROOT = VM-CLA-S01-MAG-VCOR-01:;
 MAG_TYPE = VCOR;
 POSITION = 0.35482; From here on in the positions are taken from PHW's layout CSV (CLA-EBT_V10_layout.csv)
 MANUFACTURER = Danfysik;
 SERIAL_NUMBER = 13258;
 FIELD_INTEGRAL_COEFFICIENTS = 0.0231571709981465, 0.00347357564972197;
 MAGNETIC_LENGTH = 128.650949989703;
-MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";PV_ROOT = CLA-S01-MAG-VCOR-01:;
+MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";PV_ROOT = VM-CLA-S01-MAG-VCOR-01:;
 RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
@@ -296,7 +296,7 @@ MAG_MIN_I = -5;
 MAG_MAX_I = 5;
 
 NAME = S01-HCOR2;
-PV_ROOT = CLA-S01-MAG-HCOR-02:;
+PV_ROOT = VM-CLA-S01-MAG-HCOR-02:;
 MAG_TYPE = HCOR;
 POSITION = 0.9377;
 MANUFACTURER = Danfysik;
@@ -312,14 +312,14 @@ MAG_MIN_I = -5;
 MAG_MAX_I = 5;
 
 NAME = S01-VCOR2;
-PV_ROOT = CLA-S01-MAG-VCOR-02:;
+PV_ROOT = VM-CLA-S01-MAG-VCOR-02:;
 MAG_TYPE = VCOR;
 POSITION = 0.9377;
 MANUFACTURER = Danfysik;
 SERIAL_NUMBER = 13259;
 FIELD_INTEGRAL_COEFFICIENTS = 0.0234042553191489, 0.0;
 MAGNETIC_LENGTH = 125;
-MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";PV_ROOT = CLA-S01-MAG-VCOR-02:;
+MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";PV_ROOT = VM-CLA-S01-MAG-VCOR-02:;
 RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
@@ -328,7 +328,7 @@ MAG_MIN_I = -5;
 MAG_MAX_I = 5;
 
 NAME = S02-HCOR1;
-PV_ROOT = CLA-S02-MAG-HCOR-01:;
+PV_ROOT = VM-CLA-S02-MAG-HCOR-01:;
 MAG_TYPE = HCOR;
 POSITION = 3.448080313;
 MANUFACTURER = Danfysik;
@@ -344,7 +344,7 @@ MAG_MIN_I = -10;
 MAG_MAX_I = 10;
 
 NAME = S02-VCOR1;
-PV_ROOT = CLA-S02-MAG-VCOR-01:;
+PV_ROOT = VM-CLA-S02-MAG-VCOR-01:;
 MAG_TYPE = VCOR;
 POSITION = 3.448080313;
 MANUFACTURER = Danfysik;
@@ -360,7 +360,7 @@ MAG_MIN_I = -10;
 MAG_MAX_I = 10;
 
 NAME = S02-HCOR2;
-PV_ROOT = CLA-S02-MAG-HCOR-02:;
+PV_ROOT = VM-CLA-S02-MAG-HCOR-02:;
 MAG_TYPE = HCOR;
 POSITION = 4.268070313;
 MANUFACTURER = Danfysik;
@@ -376,7 +376,7 @@ MAG_MIN_I = -10;
 MAG_MAX_I = 10;
 
 NAME = S02-VCOR2;
-PV_ROOT = CLA-S02-MAG-VCOR-02:;
+PV_ROOT = VM-CLA-S02-MAG-VCOR-02:;
 MAG_TYPE = VCOR;
 POSITION = 4.268070313;
 MANUFACTURER = Danfysik;
@@ -392,7 +392,7 @@ MAG_MIN_I = -10;
 MAG_MAX_I = 10;
 
 ;NAME = S02-HCOR3;
-;PV_ROOT = CLA-S02-MAG-HCOR-03:;
+;PV_ROOT = VM-CLA-S02-MAG-HCOR-03:;
 ;MAG_TYPE = HCOR;
 ;POSITION = 4.845560313;
 ;MANUFACTURER = Danfysik;
@@ -408,7 +408,7 @@ MAG_MAX_I = 10;
 ;MAG_MAX_I = 10;
 
 ;NAME = S02-VCOR3;
-;PV_ROOT = CLA-S02-MAG-VCOR-03:;
+;PV_ROOT = VM-CLA-S02-MAG-VCOR-03:;
 ;MAG_TYPE = VCOR;
 ;POSITION = 4.845560313;
 ;MANUFACTURER = Danfysik;
@@ -424,7 +424,7 @@ MAG_MAX_I = 10;
 ;MAG_MAX_I = 10;
 
 NAME = C2V-HCOR1;
-PV_ROOT = CLA-C2V-MAG-HCOR-01:;
+PV_ROOT = VM-CLA-C2V-MAG-HCOR-01:;
 MAG_TYPE = HCOR;
 POSITION = 6.536928145;
 MANUFACTURER = Danfysik;
@@ -441,7 +441,7 @@ MAG_MAX_I = 10;
 MAGNET_BRANCH = DIP01;
 
 NAME = C2V-VCOR1;
-PV_ROOT = CLA-C2V-MAG-VCOR-01:;
+PV_ROOT = VM-CLA-C2V-MAG-VCOR-01:;
 MAG_TYPE = VCOR;
 POSITION = 6.536928145;
 MANUFACTURER = Danfysik;
@@ -470,7 +470,7 @@ SERIAL_NUMBER = 13256;
 FIELD_INTEGRAL_COEFFICIENTS = -1.10355E-09, 3.40411E-07, -4.20048E-05, 2.168E-03, 1.357714, 0.696315
 MAGNETIC_LENGTH = 399.216; Defined along the nominal 45° arc
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Dipoles\Type 1";
-PV_ROOT = CLA-C2V-MAG-DIP-01:;
+PV_ROOT = VM-CLA-C2V-MAG-DIP-01:;
 MAG_TYPE = DIP;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.001; ???
@@ -488,7 +488,7 @@ SERIAL_NUMBER = 13257;
 FIELD_INTEGRAL_COEFFICIENTS = -9.5201E-07, 0.000151557, 0.894506059, 0.126202232;
 MAGNETIC_LENGTH = 397.752;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Dipoles\Type 2";
-PV_ROOT = CLA-C2V-MAG-DIP-02:;
+PV_ROOT = VM-CLA-C2V-MAG-DIP-02:;
 MAG_TYPE = DIP;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.001; ???
