--- a/Config/claraS02Magnets.config
+++ b/Config/claraS02Magnets.config
@@ -57,7 +57,7 @@ SERIAL_NUMBER = 13260;
 FIELD_INTEGRAL_COEFFICIENTS = 0.299132052459495, 0.00869167241506522;
 MAGNETIC_LENGTH = 163;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors";
-PV_ROOT = CLA-S02-MAG-HCOR-01:;
+PV_ROOT = VM-CLA-S02-MAG-HCOR-01:;
 PV_PSU_ROOT = CLA-S02-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
@@ -74,7 +74,7 @@ SERIAL_NUMBER = 13262;
 FIELD_INTEGRAL_COEFFICIENTS = 0.299132052459495, 0.00869167241506522;
 MAGNETIC_LENGTH = 163;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors";
-PV_ROOT = CLA-S02-MAG-HCOR-02:;
+PV_ROOT = VM-CLA-S02-MAG-HCOR-02:;
 PV_PSU_ROOT = CLA-S02-MAG-HVCOR-02:;
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
@@ -91,7 +91,7 @@ SERIAL_NUMBER = 13261;
 FIELD_INTEGRAL_COEFFICIENTS = 0.299132052459495, 0.00869167241506522;
 MAGNETIC_LENGTH = 163;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors";
-PV_ROOT = CLA-S02-MAG-HCOR-03:;
+PV_ROOT = VM-CLA-S02-MAG-HCOR-03:;
 PV_PSU_ROOT = CLA-S02-MAG-HVCOR-03:;
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
@@ -105,7 +105,7 @@ NAME = HCOR04;
 POSITION = 11.80065268; Length of C2V and SP1 line added on to put HVCOR04 after it
 MANUFACTURER = Danfysik;
 SERIAL_NUMBER = 0; ???
-PV_ROOT = CLA-S02-MAG-HCOR-04:;
+PV_ROOT = VM-CLA-S02-MAG-HCOR-04:;
 PV_PSU_ROOT = CLA-S02-MAG-HVCOR-04:;
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
@@ -122,7 +122,7 @@ SERIAL_NUMBER = 13263;
 FIELD_INTEGRAL_COEFFICIENTS = 0.139019971762932, 0.00336644233663128;
 MAGNETIC_LENGTH = 137;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors";
-PV_ROOT = CLA-C2V-MAG-HCOR-01:;
+PV_ROOT = VM-CLA-C2V-MAG-HCOR-01:;
 PV_PSU_ROOT = CLA-C2V-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
@@ -144,7 +144,7 @@ SERIAL_NUMBER = 13260;
 FIELD_INTEGRAL_COEFFICIENTS = 0.298156471708927, -0.0431940604081946;
 MAGNETIC_LENGTH = 163;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors";
-PV_ROOT = CLA-S02-MAG-VCOR-01:;
+PV_ROOT = VM-CLA-S02-MAG-VCOR-01:;
 PV_PSU_ROOT = CLA-S02-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
@@ -161,7 +161,7 @@ SERIAL_NUMBER = 13262;
 FIELD_INTEGRAL_COEFFICIENTS = 0.298156471708927, -0.0431940604081946;
 MAGNETIC_LENGTH = 163;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors";
-PV_ROOT = CLA-S02-MAG-VCOR-02:;
+PV_ROOT = VM-CLA-S02-MAG-VCOR-02:;
 PV_PSU_ROOT = CLA-S02-MAG-HVCOR-02:;
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
@@ -178,7 +178,7 @@ SERIAL_NUMBER = 13261;
 FIELD_INTEGRAL_COEFFICIENTS = 0.298156471708927, -0.0431940604081946;
 MAGNETIC_LENGTH = 163;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors";
-PV_ROOT = CLA-S02-MAG-VCOR-03:;
+PV_ROOT = VM-CLA-S02-MAG-VCOR-03:;
 PV_PSU_ROOT = CLA-S02-MAG-HVCOR-03:;
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
@@ -192,7 +192,7 @@ NAME = VCOR04;
 POSITION = 11.80065268; Length of C2V and SP1 line added on to put HVCOR04 after it
 MANUFACTURER = Danfysik;
 SERIAL_NUMBER = 0; ???
-PV_ROOT = CLA-S02-MAG-VCOR-04:;
+PV_ROOT = VM-CLA-S02-MAG-VCOR-04:;
 PV_PSU_ROOT = CLA-S02-MAG-HVCOR-04:;
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
@@ -209,7 +209,7 @@ SERIAL_NUMBER = 13263;
 FIELD_INTEGRAL_COEFFICIENTS = 0.142064204721245, 0.00344016005203196;
 MAGNETIC_LENGTH = 140;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors";
-PV_ROOT = CLA-C2V-MAG-VCOR-01:;
+PV_ROOT = VM-CLA-C2V-MAG-VCOR-01:;
 PV_PSU_ROOT = CLA-C2V-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
@@ -233,7 +233,7 @@ SERIAL_NUMBER = 13248;
 FIELD_INTEGRAL_COEFFICIENTS = -2.23133410405682E-10, 4.5196171252132E-08, -3.46208258004659E-06, 1.11195870210961E-04, 2.38129337415767E-02, 9.81229429460256E-03;
 MAGNETIC_LENGTH = 128.68478212775;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Quadrupoles";
-PV_ROOT = CLA-S02-MAG-QUAD-01:;
+PV_ROOT = VM-CLA-S02-MAG-QUAD-01:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR; ???
 RI_TOLERANCE = 0.001; ???
@@ -249,7 +249,7 @@ SERIAL_NUMBER = 13250;
 FIELD_INTEGRAL_COEFFICIENTS = -4.69068497199892E-10, 7.81236692669882E-08, -4.99557108021749E-06, 1.39687166906618E-04, 2.32819099224878E-02, 9.77695097574923E-03;
 MAGNETIC_LENGTH = 126.817287248819;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Quadrupoles";
-PV_ROOT = CLA-S02-MAG-QUAD-02:;
+PV_ROOT = VM-CLA-S02-MAG-QUAD-02:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR; ???
 RI_TOLERANCE = 0.001; ???
@@ -265,7 +265,7 @@ SERIAL_NUMBER = 13251;
 FIELD_INTEGRAL_COEFFICIENTS = -4.01132756980213E-10, 7.04774652367448E-08, -4.7303680012511E-06, 1.37571730391246E-04, 2.33327839789932E-02, 9.49568371388574E-03;
 MAGNETIC_LENGTH = 127.241994829126;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Quadrupoles";
-PV_ROOT = CLA-S02-MAG-QUAD-03:;
+PV_ROOT = VM-CLA-S02-MAG-QUAD-03:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR; ???
 RI_TOLERANCE = 0.001; ???
@@ -281,7 +281,7 @@ SERIAL_NUMBER = 13252;
 FIELD_INTEGRAL_COEFFICIENTS = -3.12868198002574E-10, 5.87771428279647E-08, -4.18748562338666E-06, 1.27524427731924E-04, 2.34218216296292E-02, 9.38588316008555E-03;
 MAGNETIC_LENGTH = 127.421664936758;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Quadrupoles";
-PV_ROOT = CLA-S02-MAG-QUAD-04:;
+PV_ROOT = VM-CLA-S02-MAG-QUAD-04:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR; ???
 RI_TOLERANCE = 0.001; ???
@@ -297,7 +297,7 @@ SERIAL_NUMBER = 13249;
 FIELD_INTEGRAL_COEFFICIENTS = -3.12232013228657E-10, 5.86576256524889E-08, -4.17897080912429E-06, 1.27265120139323E-04, 2.33741958038237E-02, 9.36679794786415E-03;
 MAGNETIC_LENGTH = 127.162566301558;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Quadrupoles";
-PV_ROOT = CLA-S02-MAG-QUAD-05:;
+PV_ROOT = VM-CLA-S02-MAG-QUAD-05:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR; ???
 RI_TOLERANCE = 0.001; ???
@@ -313,7 +313,7 @@ SERIAL_NUMBER = 13255;
 FIELD_INTEGRAL_COEFFICIENTS = -1.30185900474931E-11, 5.70352698264348E-09, -9.08937880373639E-07, 6.03053164909332E-05, 0.014739040805921, 1.37593271780352E-02;
 MAGNETIC_LENGTH = 121.567272525393;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Quadrupoles";
-PV_ROOT = CLA-C2V-MAG-QUAD-01:;
+PV_ROOT = VM-CLA-C2V-MAG-QUAD-01:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR; ???
 RI_TOLERANCE = 0.001; ???
@@ -329,7 +329,7 @@ SERIAL_NUMBER = 13254;
 FIELD_INTEGRAL_COEFFICIENTS = -1.30779403854705E-11, 5.72293796261772E-09, -9.08645007418186E-07, 5.97762384752619E-05, 1.47596073775721E-02, 1.58516912403471E-02;
 MAGNETIC_LENGTH = 121.511900610076;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Quadrupoles";
-PV_ROOT = CLA-C2V-MAG-QUAD-02:;
+PV_ROOT = VM-CLA-C2V-MAG-QUAD-02:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR; ???
 RI_TOLERANCE = 0.001; ???
@@ -345,7 +345,7 @@ SERIAL_NUMBER = 13253;
 FIELD_INTEGRAL_COEFFICIENTS = -1.31651924239548E-11, 5.76805215137824E-09, -9.16843633799561E-07, 6.036266595182E-05, 1.47634437187611E-02, 0.013343693771224;
 MAGNETIC_LENGTH = 121.550749828396;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Quadrupoles";
-PV_ROOT = CLA-C2V-MAG-QUAD-03:;
+PV_ROOT = VM-CLA-C2V-MAG-QUAD-03:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR; ???
 RI_TOLERANCE = 0.001; ???
@@ -367,7 +367,7 @@ SERIAL_NUMBER = 13256;
 FIELD_INTEGRAL_COEFFICIENTS = -1.10355E-12, 3.40411E-10, -4.20048E-08, 2.168E-06, 0.001357714, 0.000696315;
 MAGNETIC_LENGTH = 399.216; Defined along the nominal 45° arc
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Dipoles\Type 1";
-PV_ROOT = CLA-C2V-MAG-DIP-01:;
+PV_ROOT = VM-CLA-C2V-MAG-DIP-01:;
 MAG_TYPE = DIP;
 MAG_REV_TYPE = NR;
 RI_TOLERANCE = 0.001; ???
@@ -383,7 +383,7 @@ SERIAL_NUMBER = 13257;
 FIELD_INTEGRAL_COEFFICIENTS = -9.5201E-07, 0.000151557, 0.894506059, 0.126202232;
 MAGNETIC_LENGTH = 397.752;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Dipoles\Type 2";
-PV_ROOT = CLA-C2V-MAG-DIP-02:;
+PV_ROOT = VM-CLA-C2V-MAG-DIP-02:;
 MAG_TYPE = DIP;
 MAG_REV_TYPE = NR;
 RI_TOLERANCE = 0.001; ???
