--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -76,7 +76,7 @@ MANUFACTURER = Danfysik;
 FIELD_INTEGRAL_COEFFICIENTS = 0.000513431, -1.27695E-07, 1.61655E-10, -0.032733798, -4.29885E-06, 2.28967E-08, 0.001833327, -2.5354E-06, -1.04715E-09, -1.61177E-12, -2.94837E-05, 2.13938E-07,  -0.003957362, 0.246073139, -4.393602393, 0.0;
 ;old values: FIELD_INTEGRAL_COEFFICIENTS = 0.000449207, -1.07199E-07, 1.31132E-10, -0.029521811, -4.34196E-06, 1.8541E-08, 0.001654436, -1.89555E-06, -7.20952E-10, -1.51066E-12, -2.68258E-05, 1.648E-07,  -3.46288e-4, 0.021356715, -0.38108999, 0.0;
 MAGNETIC_LENGTH = 12.5;
-PV_ROOT = EBT-INJ-MAG-BSOL-01:  ;
+PV_ROOT = VM-EBT-INJ-MAG-BSOL-01:  ;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = BSOL;
 RI_TOLERANCE = 0.01;
@@ -106,7 +106,7 @@ FIELD_INTEGRAL_COEFFICIENTS = 2.17321571, -0.858179277, 0.172127130, -0.01710333
 ;old values: FIELD_INTEGRAL_COEFFICIENTS = 2.13556165, -0.843299065, 0.168958882, -0.0167710091, 6.56775844e-04,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
 ;old values: FIELD_INTEGRAL_COEFFICIENTS = 104.285048, -43.2881185, 0.924829558, -0.0890716383, 4.26526273,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
 MAGNETIC_LENGTH = 139.50;
-PV_ROOT = EBT-INJ-MAG-SOL-01:;
+PV_ROOT = VM-EBT-INJ-MAG-SOL-01:;
 MAG_TYPE = SOL;
 RI_TOLERANCE = 0.1;
 NUM_DEGAUSS_STEPS = 11;
@@ -133,7 +133,7 @@ Polynomal expansion of field integral vs current where field_integral = a0*curre
 FIELD_INTEGRAL_COEFFICIENTS = 0.0989613526570049,0.0;
 MAGNETIC_LENGTH = 176.594827586207;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-HCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-01:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 RI_TOLERANCE = 0.01;
@@ -151,7 +151,7 @@ SERIAL_NUMBER = 1279-14610-0006;
 FIELD_INTEGRAL_COEFFICIENTS =  0.101352657004831,0.0;
 MAGNETIC_LENGTH = 182.039045553145;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-HCOR-02:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-02:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 RI_TOLERANCE = 0.01;
@@ -169,7 +169,7 @@ SERIAL_NUMBER = 1279-14610-0010;
 FIELD_INTEGRAL_COEFFICIENTS = 0.101352657004831, 0.0;
 MAGNETIC_LENGTH = 182.039045553145;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-HCOR-03:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-03:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 RI_TOLERANCE = 0.01;
@@ -187,7 +187,7 @@ SERIAL_NUMBER = 1279-14610-0003;
 FIELD_INTEGRAL_COEFFICIENTS = 0.101763285024155, 0.0;
 MAGNETIC_LENGTH = 181.987041036717;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-HCOR-04:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-04:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 RI_TOLERANCE = 0.01;
@@ -206,7 +206,7 @@ SERIAL_NUMBER = 1279-14610-0001;
 FIELD_INTEGRAL_COEFFICIENTS = 0.103007246376812, 0.0;
 MAGNETIC_LENGTH = 182.24358974359;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-HCOR-05:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-05:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 RI_TOLERANCE = 0.01;
@@ -224,7 +224,7 @@ SERIAL_NUMBER = 1279-14610-0004;
 FIELD_INTEGRAL_COEFFICIENTS = 0.102617753623188, 0.0;
 MAGNETIC_LENGTH = 182.725806451613;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-HCOR-06:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-06:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 RI_TOLERANCE = 0.015;
@@ -242,7 +242,7 @@ SERIAL_NUMBER = 1279-14610-0005;
 FIELD_INTEGRAL_COEFFICIENTS = 0.103037439613527, 0.0;
 MAGNETIC_LENGTH = 183.079399141631;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-HCOR-07:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-07:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 RI_TOLERANCE = 0.01;
@@ -260,7 +260,7 @@ SERIAL_NUMBER = 1279-14610-0011;
 FIELD_INTEGRAL_COEFFICIENTS = 0.107276570048309, 0.0;
 MAGNETIC_LENGTH = 183.522727272727;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-HCOR-08:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-08:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 RI_TOLERANCE = 0.01;
@@ -278,7 +278,7 @@ SERIAL_NUMBER = 1279-14610-0008;
 FIELD_INTEGRAL_COEFFICIENTS = 0.108559782608696, 0.0;
 MAGNETIC_LENGTH = 182.327586206896;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-HCOR-09:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-09:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 RI_TOLERANCE = 0.01;
@@ -296,7 +296,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0009;
 MAGNETIC_LENGTH = 182.966531440162;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-HCOR-10:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-10:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 FIELD_INTEGRAL_COEFFICIENTS = 0.109960366, 0.0;
 MAG_TYPE = HCOR;
@@ -315,7 +315,7 @@ SERIAL_NUMBER = 1279-14610-0007;
 FIELD_INTEGRAL_COEFFICIENTS = 0.109396135, 0.0;
 MAGNETIC_LENGTH = 182.2535211;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-HCOR-11:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-11:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 RI_TOLERANCE = 0.01;
@@ -337,7 +337,7 @@ SERIAL_NUMBER = 1279-14610-0002;
 FIELD_INTEGRAL_COEFFICIENTS = 0.0989613526570049, 0.0;
 MAGNETIC_LENGTH = 176.594827586207;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-VCOR-01:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-01:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 RI_TOLERANCE = 0.01;
@@ -355,7 +355,7 @@ SERIAL_NUMBER = 1279-14610-0006;
 FIELD_INTEGRAL_COEFFICIENTS = 0.101352657004831, 0.0;
 MAGNETIC_LENGTH = 182.039045553145;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-VCOR-02:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-02:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 RI_TOLERANCE = 0.01;
@@ -373,7 +373,7 @@ SERIAL_NUMBER = 1279-14610-0010;
 FIELD_INTEGRAL_COEFFICIENTS = 0.101352657004831, 0.0;
 MAGNETIC_LENGTH = 182.039045553145;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-VCOR-03:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-03:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 RI_TOLERANCE = 0.01;
@@ -391,7 +391,7 @@ SERIAL_NUMBER = 1279-14610-0003;
 FIELD_INTEGRAL_COEFFICIENTS = 0.101763285024155, 0.0;
 MAGNETIC_LENGTH = 181.987041036717;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-VCOR-04:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-04:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 RI_TOLERANCE = 0.01;
@@ -410,7 +410,7 @@ SERIAL_NUMBER = 1279-14610-0001;
 FIELD_INTEGRAL_COEFFICIENTS = 0.103007246376812, 0.0;
 MAGNETIC_LENGTH = 182.24358974359;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-VCOR-05:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-05:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 RI_TOLERANCE = 0.01;
@@ -428,7 +428,7 @@ SERIAL_NUMBER = 1279-14610-0004;
 FIELD_INTEGRAL_COEFFICIENTS =  0.102617753623188, 0.0;
 MAGNETIC_LENGTH = 182.725806451613;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-VCOR-06:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-06:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 RI_TOLERANCE = 0.01;
@@ -446,7 +446,7 @@ SERIAL_NUMBER = 1279-14610-0005;
 FIELD_INTEGRAL_COEFFICIENTS =  0.103037439613527, 0.0;
 MAGNETIC_LENGTH = 183.079399141631;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-VCOR-07:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-07:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 RI_TOLERANCE = 0.01;
@@ -464,7 +464,7 @@ SERIAL_NUMBER = 1279-14610-0011;
 FIELD_INTEGRAL_COEFFICIENTS =  0.107276570048309, 0.0;
 MAGNETIC_LENGTH = 183.522727272727;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-VCOR-08:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-08:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 RI_TOLERANCE = 0.01;
@@ -482,7 +482,7 @@ SERIAL_NUMBER = 1279-14610-0008;
 FIELD_INTEGRAL_COEFFICIENTS =  0.108559782608696, 0.0;
 MAGNETIC_LENGTH = 182.327586206896;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-VCOR-09:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-09:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 RI_TOLERANCE = 0.01;
@@ -501,7 +501,7 @@ SERIAL_NUMBER = 1279-14610-0009;
 FIELD_INTEGRAL_COEFFICIENTS =  0.108940217, 0.0;
 MAGNETIC_LENGTH = 182.9665314;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-VCOR-10:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-10:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 RI_TOLERANCE = 0.01;
@@ -520,7 +520,7 @@ SERIAL_NUMBER = 1279-14610-0007;
 FIELD_INTEGRAL_COEFFICIENTS =  0.109396135, 0.0;
 MAGNETIC_LENGTH = 182.2535211;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-VCOR-11:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-11:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 RI_TOLERANCE = 0.01;
@@ -544,7 +544,7 @@ SERIAL_NUMBER = EBTFQ2M08;
 FIELD_INTEGRAL_COEFFICIENTS = -3.04115792675565E-05, 0.000408686482135776, 0.103241242070669, 0.00125577133254764;
 MAGNETIC_LENGTH = 125.368867474869;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-01:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-01:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -561,7 +561,7 @@ SERIAL_NUMBER = EBTFQ2M04;
 FIELD_INTEGRAL_COEFFICIENTS = -2.41987944118493E-05, 0.000313311377264068, 0.103496259204809, 0.000993229345279812;
 MAGNETIC_LENGTH = 125.145131747801;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-02:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-02:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.005;
 NUM_DEGAUSS_STEPS = 11;
@@ -578,7 +578,7 @@ SERIAL_NUMBER = EBTFQ2M07;
 FIELD_INTEGRAL_COEFFICIENTS = -3.42110684486398E-05, 0.000456192955935329, 0.10312655249584, 0.00113654928965265;
 MAGNETIC_LENGTH = 125.337920371927;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-03:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-03:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.005;
 NUM_DEGAUSS_STEPS = 11;
@@ -595,7 +595,7 @@ SERIAL_NUMBER = EBTFQ2M09;
 FIELD_INTEGRAL_COEFFICIENTS = -2.90597004390234E-05, 0.000383461236009496, 0.103347527900997, 0.00116335086609974;
 MAGNETIC_LENGTH = 125.244281671835;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-04:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-04:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -613,7 +613,7 @@ SERIAL_NUMBER = EBTFQ2M05;
 FIELD_INTEGRAL_COEFFICIENTS = -2.28625597225573E-05, 0.000310696398249702, 0.103519837397042, 0.00104459623600727;
 MAGNETIC_LENGTH = 125.223958037202;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-05:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-05:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -631,7 +631,7 @@ SERIAL_NUMBER = EBTFQ2M02;
 FIELD_INTEGRAL_COEFFICIENTS = -3.77887463072432E-05, 0.000518011967842953, 0.102826208113528, 0.00197957472695541;
 MAGNETIC_LENGTH = 125.033079276906;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-06:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-06:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -650,7 +650,7 @@ SERIAL_NUMBER = EBTFQ2M03;
 FIELD_INTEGRAL_COEFFICIENTS = -1.51802828278694E-05, 0.000208236492203741, 0.102224127676636, 0.00205656183129602;
 MAGNETIC_LENGTH = 125.299909233924;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-07:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-07:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -667,7 +667,7 @@ SERIAL_NUMBER = EBTFQ2M01;
 FIELD_INTEGRAL_COEFFICIENTS = -3.06357099595939E-05, 0.000442533546326552, 0.101577009522434, 0.00146589509380893;
 MAGNETIC_LENGTH = 125.27558356645;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-08:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-08:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -684,7 +684,7 @@ SERIAL_NUMBER = EMDQM06;
 FIELD_INTEGRAL_COEFFICIENTS = 0.111939163037871, -0.00132252769474545;
 MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-09:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-09:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -701,7 +701,7 @@ SERIAL_NUMBER = EMDQM05;
 FIELD_INTEGRAL_COEFFICIENTS = 0.111966157109812, -0.00170732356716569;
 MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-10:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-10:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -718,7 +718,7 @@ SERIAL_NUMBER = EMDQM02;
 FIELD_INTEGRAL_COEFFICIENTS = 0.112072763436341, -0.00182025848896622;
 MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-11:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-11:;
 MAG_TYPE = QUAD;
 NUM_ILOCKS = 6;
 RI_TOLERANCE = 0.001;
@@ -737,7 +737,7 @@ SERIAL_NUMBER = EMIQM04;
 FIELD_INTEGRAL_COEFFICIENTS = 1.58996386665694, 6.76912235527686E-05;
 MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Injection line\SCX Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-12:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-12:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
@@ -754,7 +754,7 @@ SERIAL_NUMBER = EBTFQ2M06;
 FIELD_INTEGRAL_COEFFICIENTS = -2.87186700627592E-05, 0.000391071197622624, 0.103186587329201, 0.00109631338038853;
 MAGNETIC_LENGTH = 125.299909233924;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-13:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-13:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -772,7 +772,7 @@ SERIAL_NUMBER = EMIQM05;
 FIELD_INTEGRAL_COEFFICIENTS = 1.59235070995081, -0.022877181714572;
 MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Injection line\SCX Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-14:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-14:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -789,7 +789,7 @@ SERIAL_NUMBER = EMDQM08;
 FIELD_INTEGRAL_COEFFICIENTS = 0.111954754, -0.001381788;
 MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-15:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-15:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -811,7 +811,7 @@ SERIAL_NUMBER = EBTFDIM02;
 FIELD_INTEGRAL_COEFFICIENTS = -0.001052242, 0.021129402, 7.92076905, 0.072610365;
 MAGNETIC_LENGTH = 414.229; For dipoles, the magnetic length is defined along the nominal arc length.
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-DIP-01:;
+PV_ROOT = VM-EBT-INJ-MAG-DIP-01:;
 MAG_TYPE = DIP;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -833,7 +833,7 @@ SERIAL_NUMBER = EBTFDIM01;
 FIELD_INTEGRAL_COEFFICIENTS = -0.00038343, 0.002868828, 8.075456266, -0.299379231;
 MAGNETIC_LENGTH = 413.824;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-DIP-02:;
+PV_ROOT = VM-EBT-INJ-MAG-DIP-02:;
 MAG_TYPE = DIP;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -854,7 +854,7 @@ SERIAL_NUMBER = EBTFDIM03;
 FIELD_INTEGRAL_COEFFICIENTS = -0.002065291, 0.037340159, 7.863201936, 0.211661623;
 MAGNETIC_LENGTH = 414.409;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-DIP-03:;
+PV_ROOT = VM-EBT-INJ-MAG-DIP-03:;
 MAG_TYPE = DIP;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
