--- a/Config/velaINJScreens.config
+++ b/Config/velaINJScreens.config
@@ -209,7 +209,7 @@ NUMBER_OF_ILOCKS = 0;		#If the number of interlocks changes between objects, the
 #however it solved the problem of the program not subscribing to the chids in the new version.
 
 NAME = VELA-SCR-01;
-PV_ROOT = EBT-INJ-DIA-SCR-01:;
+PV_ROOT = VM-EBT-INJ-DIA-SCR-01:;
 SCREEN_TYPE = VELA_HV_MOVER;
 V_RETRACTED = 0;
 V_RETRACTED_POS = 0;
@@ -237,7 +237,7 @@ H_APT_3 = 12;
 H_APT_3_POS = 197.3;
 
 NAME = VELA-SCR-02;
-PV_ROOT = EBT-INJ-DIA-SCR-02:;
+PV_ROOT = VM-EBT-INJ-DIA-SCR-02:;
 SCREEN_TYPE = CLARA_HV_MOVER;
 V_RETRACTED = 0;
 V_RETRACTED_POS = 0;
@@ -253,7 +253,7 @@ H_SLIT_1 = 7;
 H_SLIT_1_POS = 46.2;
 
 NAME = VELA-SCR-03;
-PV_ROOT = EBT-INJ-DIA-SCR-03:;
+PV_ROOT = VM-EBT-INJ-DIA-SCR-03:;
 SCREEN_TYPE = CLARA_HV_MOVER;
 V_RETRACTED = 0;
 V_RETRACTED_POS = 0;
@@ -267,7 +267,7 @@ H_SLIT_1 = 7;
 H_SLIT_1_POS = 46.2;
 
 NAME = VELA-SCR-04;
-PV_ROOT = EBT-INJ-DIA-SCR-04:;
+PV_ROOT = VM-EBT-INJ-DIA-SCR-04:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
@@ -275,7 +275,7 @@ YAG = 4;
 YAG_POS = 148.5;
 
 NAME = VELA-SCR-05;
-PV_ROOT = EBT-INJ-DIA-SCR-05:;
+PV_ROOT = VM-EBT-INJ-DIA-SCR-05:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
@@ -283,7 +283,7 @@ YAG = 4;
 YAG_POS = 148.5;
 
 NAME = VELA-SCR-06;
-PV_ROOT = EBT-INJ-DIA-SCR-06:;
+PV_ROOT = VM-EBT-INJ-DIA-SCR-06:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
@@ -291,7 +291,7 @@ YAG = 4;
 YAG_POS = 148.5;
 
 NAME = VELA-SCR-07;
-PV_ROOT = EBT-INJ-DIA-SCR-07:;
+PV_ROOT = VM-EBT-INJ-DIA-SCR-07:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
@@ -299,7 +299,7 @@ YAG = 4;
 YAG_POS = 148.5;
 
 NAME = VELA-SCR-08;
-PV_ROOT = EBT-INJ-DIA-SCR-08:;
+PV_ROOT = VM-EBT-INJ-DIA-SCR-08:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
