--- a/Config/velaLRRGunLLRF.config
+++ b/Config/velaLRRGunLLRF.config
@@ -51,7 +51,7 @@ NUMBER_OF_OBJECTS = 1;      For sanity checks
 NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects, then redefine this before the "name" paramater
 
 NAME    = GUNLLRF;
-PV_ROOT = EBT-GUN:;      #Tim P: switch PV for testing ! sorry if ive caused clashes. the Old one was EBT-INJ-DIA-LLRF-RF:;
+PV_ROOT = VM-EBT-GUN:;      #Tim P: switch PV for testing ! sorry if ive caused clashes. the Old one was EBT-INJ-DIA-LLRF-RF:;
 LLRF_MAX_AMPLITUDE = 2200; maximum amplitude that the controller can apply, for additionaly saftey this could be compiled in at source... 
 LLRF_PHI_CALIBRATION = 1.00;        llrf phi to degrees 
 LLRF_AMP_CALIBRATION = 0.0344637;   1/29.016 llrf amplitiude to MV/m in cavity 
