--- a/Config/CB2Magnets.config
+++ b/Config/CB2Magnets.config
@@ -62,7 +62,7 @@ NUMBER_OF_ILOCKS  = 0;  Most have 6 or 8 (but not the BSOL). Redefine before the
 NAME = LRG-BSOL;
 POSITION = -0.072;
 MANUFACTURER = Danfysik;
-PV_ROOT = CLA-LRG1-MAG-BSOL-01:  ;
+PV_ROOT = VM-CLA-LRG1-MAG-BSOL-01:  ;
 MAG_TYPE = BSOL;
 #Magneticlength and coeffs copied from velaINJMagnet.config#
 FIELD_INTEGRAL_COEFFICIENTS = 0.000513431, -1.27695E-07, 1.61655E-10, -0.032733798, -4.29885E-06, 2.28967E-08, 0.001833327, -2.5354E-06, -1.04715E-09, -1.61177E-12, -2.94837E-05, 2.13938E-07,  -0.003957362, 0.246073139, -4.393602393, 0.0;
@@ -79,7 +79,7 @@ NAME = LRG-SOL;
 POSITION = 0.127;
 MANUFACTURER = SEF;
 SERIAL_NUMBER = 01;
-PV_ROOT = CLA-GUN-MAG-SOL-02:;
+PV_ROOT = VM-CLA-GUN-MAG-SOL-02:;
 MAG_TYPE = SOL;
 #Magneticlength and coefs copied from velaINJMagnet.config#
 FIELD_INTEGRAL_COEFFICIENTS = 2.17321571, -0.858179277, 0.172127130, -0.0171033399, 6.70371530e-04,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
@@ -97,7 +97,7 @@ NAME = L01-SOL1;
 POSITION = 1.64; estimated from schematic
 MANUFACTURER = "Efremov Institute";
 SERIAL_NUMBER = 08;
-PV_ROOT = CLA-L01-MAG-SOL-01:;
+PV_ROOT = VM-CLA-L01-MAG-SOL-01:;
 MAG_TYPE = SOL;
 ;                             coeff_a for Larmor angle .................................................; coeff_b for integrated field
 ;                                       I,           p*I,        p**2*I,          p**3*I,         p**4*I; I**3, I**2,             I,           1
@@ -116,7 +116,7 @@ NAME = L01-SOL2;
 POSITION = 2.70; estimated from schematic
 MANUFACTURER = "Efremov Institute";
 SERIAL_NUMBER = 09;
-PV_ROOT = CLA-L01-MAG-SOL-02:;
+PV_ROOT = VM-CLA-L01-MAG-SOL-02:;
 MAG_TYPE = SOL;
 ;                             coeff_a for Larmor angle .................................................; coeff_b for integrated field
 ;                                       I,           p*I,        p**2*I,          p**3*I,         p**4*I; I**3, I**2,             I,           1
@@ -135,7 +135,7 @@ MAG_MAX_I = 200;
 //quads
 
 NAME = S02-QUAD1;
-PV_ROOT = CLA-S02-MAG-QUAD-01:;
+PV_ROOT = VM-CLA-S02-MAG-QUAD-01:;
 MAG_TYPE = QUAD;
 POSITION = 3.577500313;
 MANUFACTURER = Danfysik;
@@ -152,7 +152,7 @@ MAG_MIN_I = -54;
 MAG_MAX_I = 54;
 
 NAME = S02-QUAD2;
-PV_ROOT = CLA-S02-MAG-QUAD-02:;
+PV_ROOT = VM-CLA-S02-MAG-QUAD-02:;
 MAG_TYPE = QUAD;
 POSITION = 3.977500313;
 MANUFACTURER = Danfysik;
@@ -169,7 +169,7 @@ MAG_MIN_I = -54;
 MAG_MAX_I = 54;
 
 NAME = S02-QUAD3;
-PV_ROOT = CLA-S02-MAG-QUAD-03:;
+PV_ROOT = VM-CLA-S02-MAG-QUAD-03:;
 MAG_TYPE = QUAD;
 POSITION = 5.277500313;
 MANUFACTURER = Danfysik;
@@ -186,7 +186,7 @@ MAG_MIN_I = -54;
 MAG_MAX_I = 54;
 
 NAME = S02-QUAD4;
-PV_ROOT = CLA-S02-MAG-QUAD-04:;
+PV_ROOT = VM-CLA-S02-MAG-QUAD-04:;
 MAG_TYPE = QUAD;
 POSITION = 5.677500313;
 MANUFACTURER = Danfysik;
@@ -203,7 +203,7 @@ MAG_MIN_I = -54;
 MAG_MAX_I = 54;
 
 NAME = S02-QUAD5;
-PV_ROOT = CLA-S02-MAG-QUAD-05:;
+PV_ROOT = VM-CLA-S02-MAG-QUAD-05:;
 MAG_TYPE = QUAD;
 POSITION = 11.66280268; Length of C2V and SP1 line added on to put QUAD05 after it
 MANUFACTURER = Danfysik;
@@ -221,7 +221,7 @@ MAG_MAX_I = 54;
 
 
 NAME = C2V-QUAD1;
-PV_ROOT = CLA-C2V-MAG-QUAD-01:;
+PV_ROOT = VM-CLA-C2V-MAG-QUAD-01:;
 MAG_TYPE = QUAD;
 POSITION = 6.660148145;
 MANUFACTURER = Danfysik;
@@ -239,7 +239,7 @@ MAG_MAX_I = 200;
 MAGNET_BRANCH = DIP01;
 
 NAME = C2V-QUAD2;
-PV_ROOT = CLA-C2V-MAG-QUAD-02:;
+PV_ROOT = VM-CLA-C2V-MAG-QUAD-02:;
 MAG_TYPE = QUAD;
 POSITION = 6.950148145;
 MANUFACTURER = Danfysik;
@@ -257,7 +257,7 @@ MAG_MAX_I = 200;
 MAGNET_BRANCH = DIP01;
 
 NAME = C2V-QUAD3;
-PV_ROOT = CLA-C2V-MAG-QUAD-03:;
+PV_ROOT = VM-CLA-C2V-MAG-QUAD-03:;
 MAG_TYPE = QUAD;
 POSITION = 7.240148145;
 MANUFACTURER = Danfysik;
@@ -278,7 +278,7 @@ MAGNET_BRANCH = DIP01;
 // hv_corrs
 
 NAME = S01-HCOR1;
-PV_ROOT = CLA-S01-MAG-HCOR-01:;
+PV_ROOT = VM-CLA-S01-MAG-HCOR-01:;
 MAG_TYPE = HCOR;
 POSITION = 0.35482; From here on in the positions are taken from PHW's layout CSV (CLA-EBT_V10_layout.csv)
 MANUFACTURER = Danfysik;
@@ -295,14 +295,14 @@ MAG_MIN_I = -5;
 MAG_MAX_I = 5;
 
 NAME = S01-VCOR1;
-PV_ROOT = CLA-S01-MAG-VCOR-01:;
+PV_ROOT = VM-CLA-S01-MAG-VCOR-01:;
 MAG_TYPE = VCOR;
 POSITION = 0.35482; From here on in the positions are taken from PHW's layout CSV (CLA-EBT_V10_layout.csv)
 MANUFACTURER = Danfysik;
 SERIAL_NUMBER = 13258;
 FIELD_INTEGRAL_COEFFICIENTS = 0.0231571709981465, 0.00347357564972197;
 MAGNETIC_LENGTH = 128.650949989703;
-MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";PV_ROOT = CLA-S01-MAG-VCOR-01:;
+MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";PV_ROOT = VM-CLA-S01-MAG-VCOR-01:;
 RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   3.0,  -3.0, 2.0, -2.0,  1.0,  -1.0,  0.0;
@@ -312,7 +312,7 @@ MAG_MIN_I = -5;
 MAG_MAX_I = 5;
 
 NAME = S01-HCOR2;
-PV_ROOT = CLA-S01-MAG-HCOR-02:;
+PV_ROOT = VM-CLA-S01-MAG-HCOR-02:;
 MAG_TYPE = HCOR;
 POSITION = 0.9377;
 MANUFACTURER = Danfysik;
@@ -329,14 +329,14 @@ MAG_MIN_I = -5;
 MAG_MAX_I = 5;
 
 NAME = S01-VCOR2;
-PV_ROOT = CLA-S01-MAG-VCOR-02:;
+PV_ROOT = VM-CLA-S01-MAG-VCOR-02:;
 MAG_TYPE = VCOR;
 POSITION = 0.9377;
 MANUFACTURER = Danfysik;
 SERIAL_NUMBER = 13259;
 FIELD_INTEGRAL_COEFFICIENTS = 0.0234042553191489, 0.0;
 MAGNETIC_LENGTH = 125;
-MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";PV_ROOT = CLA-S01-MAG-VCOR-02:;
+MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";PV_ROOT = VM-CLA-S01-MAG-VCOR-02:;
 RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   3.0,  -3.0, 2.0, -2.0,  1.0,  -1.0,  0.0;
@@ -346,7 +346,7 @@ MAG_MIN_I = -5;
 MAG_MAX_I = 5;
 
 NAME = S02-HCOR1;
-PV_ROOT = CLA-S02-MAG-HCOR-01:;
+PV_ROOT = VM-CLA-S02-MAG-HCOR-01:;
 MAG_TYPE = HCOR;
 POSITION = 3.448080313;
 MANUFACTURER = Danfysik;
@@ -363,7 +363,7 @@ MAG_MIN_I = -10;
 MAG_MAX_I = 10;
 
 NAME = S02-VCOR1;
-PV_ROOT = CLA-S02-MAG-VCOR-01:;
+PV_ROOT = VM-CLA-S02-MAG-VCOR-01:;
 MAG_TYPE = VCOR;
 POSITION = 3.448080313;
 MANUFACTURER = Danfysik;
@@ -380,7 +380,7 @@ MAG_MIN_I = -10;
 MAG_MAX_I = 10;
 
 NAME = S02-HCOR2;
-PV_ROOT = CLA-S02-MAG-HCOR-02:;
+PV_ROOT = VM-CLA-S02-MAG-HCOR-02:;
 MAG_TYPE = HCOR;
 POSITION = 4.268070313;
 MANUFACTURER = Danfysik;
@@ -397,7 +397,7 @@ MAG_MIN_I = -10;
 MAG_MAX_I = 10;
 
 NAME = S02-VCOR2;
-PV_ROOT = CLA-S02-MAG-VCOR-02:;
+PV_ROOT = VM-CLA-S02-MAG-VCOR-02:;
 MAG_TYPE = VCOR;
 POSITION = 4.268070313;
 MANUFACTURER = Danfysik;
@@ -414,7 +414,7 @@ MAG_MIN_I = -10;
 MAG_MAX_I = 10;
 
 ;NAME = S02-HCOR3;
-;PV_ROOT = CLA-S02-MAG-HCOR-03:;
+;PV_ROOT = VM-CLA-S02-MAG-HCOR-03:;
 ;MAG_TYPE = HCOR;
 ;POSITION = 4.845560313;
 ;MANUFACTURER = Danfysik;
@@ -431,7 +431,7 @@ MAG_MAX_I = 10;
 ;MAG_MAX_I = 10;
 
 ;NAME = S02-VCOR3;
-;PV_ROOT = CLA-S02-MAG-VCOR-03:;
+;PV_ROOT = VM-CLA-S02-MAG-VCOR-03:;
 ;MAG_TYPE = VCOR;
 ;POSITION = 4.845560313;
 ;MANUFACTURER = Danfysik;
@@ -448,7 +448,7 @@ MAG_MAX_I = 10;
 ;MAG_MAX_I = 10;
 
 NAME = C2V-HCOR1;
-PV_ROOT = CLA-C2V-MAG-HCOR-01:;
+PV_ROOT = VM-CLA-C2V-MAG-HCOR-01:;
 MAG_TYPE = HCOR;
 POSITION = 6.536928145;
 MANUFACTURER = Danfysik;
@@ -466,7 +466,7 @@ MAG_MAX_I = 10;
 MAGNET_BRANCH = DIP01;
 
 NAME = C2V-VCOR1;
-PV_ROOT = CLA-C2V-MAG-VCOR-01:;
+PV_ROOT = VM-CLA-C2V-MAG-VCOR-01:;
 MAG_TYPE = VCOR;
 POSITION = 6.536928145;
 MANUFACTURER = Danfysik;
@@ -496,7 +496,7 @@ SERIAL_NUMBER = 13256;
 FIELD_INTEGRAL_COEFFICIENTS = -1.10355E-09, 3.40411E-07, -4.20048E-05, 2.168E-03, 1.357714, 0.696315
 MAGNETIC_LENGTH = 399.216; Defined along the nominal 45° arc
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Dipoles\Type 1";
-PV_ROOT = CLA-C2V-MAG-DIP-01:;
+PV_ROOT = VM-CLA-C2V-MAG-DIP-01:;
 MAG_TYPE = DIP;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.001; ???
@@ -526,7 +526,7 @@ SERIAL_NUMBER = 1279-14610-0001;
 FIELD_INTEGRAL_COEFFICIENTS = 0.103007246376812, 0.0;
 MAGNETIC_LENGTH = 182.24358974359;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-HCOR-05:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-05:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 RI_TOLERANCE = 0.01;
@@ -544,7 +544,7 @@ SERIAL_NUMBER = 1279-14610-0004;
 FIELD_INTEGRAL_COEFFICIENTS = 0.102617753623188, 0.0;
 MAGNETIC_LENGTH = 182.725806451613;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-HCOR-06:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-06:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 RI_TOLERANCE = 0.015;
@@ -562,7 +562,7 @@ SERIAL_NUMBER = 1279-14610-0005;
 FIELD_INTEGRAL_COEFFICIENTS = 0.103037439613527, 0.0;
 MAGNETIC_LENGTH = 183.079399141631;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-HCOR-07:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-07:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 RI_TOLERANCE = 0.01;
@@ -580,7 +580,7 @@ SERIAL_NUMBER = 1279-14610-0011;
 FIELD_INTEGRAL_COEFFICIENTS = 0.107276570048309, 0.0;
 MAGNETIC_LENGTH = 183.522727272727;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-HCOR-08:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-08:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 RI_TOLERANCE = 0.01;
@@ -598,7 +598,7 @@ SERIAL_NUMBER = 1279-14610-0008;
 FIELD_INTEGRAL_COEFFICIENTS = 0.108559782608696, 0.0;
 MAGNETIC_LENGTH = 182.327586206896;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-HCOR-09:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-09:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 RI_TOLERANCE = 0.01;
@@ -616,7 +616,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0009;
 MAGNETIC_LENGTH = 182.966531440162;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-HCOR-10:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-10:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 FIELD_INTEGRAL_COEFFICIENTS = 0.109960366, 0.0;
 MAG_TYPE = HCOR;
@@ -635,7 +635,7 @@ SERIAL_NUMBER = 1279-14610-0007;
 FIELD_INTEGRAL_COEFFICIENTS = 0.109396135, 0.0;
 MAGNETIC_LENGTH = 182.2535211;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-HCOR-11:;
+PV_ROOT = VM-EBT-INJ-MAG-HCOR-11:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
 RI_TOLERANCE = 0.01;
@@ -658,7 +658,7 @@ SERIAL_NUMBER = 1279-14610-0001;
 FIELD_INTEGRAL_COEFFICIENTS = 0.103007246376812, 0.0;
 MAGNETIC_LENGTH = 182.24358974359;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-VCOR-05:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-05:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 RI_TOLERANCE = 0.01;
@@ -676,7 +676,7 @@ SERIAL_NUMBER = 1279-14610-0004;
 FIELD_INTEGRAL_COEFFICIENTS =  0.102617753623188, 0.0;
 MAGNETIC_LENGTH = 182.725806451613;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-VCOR-06:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-06:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 RI_TOLERANCE = 0.01;
@@ -694,7 +694,7 @@ SERIAL_NUMBER = 1279-14610-0005;
 FIELD_INTEGRAL_COEFFICIENTS =  0.103037439613527, 0.0;
 MAGNETIC_LENGTH = 183.079399141631;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-VCOR-07:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-07:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 RI_TOLERANCE = 0.01;
@@ -712,7 +712,7 @@ SERIAL_NUMBER = 1279-14610-0011;
 FIELD_INTEGRAL_COEFFICIENTS =  0.107276570048309, 0.0;
 MAGNETIC_LENGTH = 183.522727272727;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-VCOR-08:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-08:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 RI_TOLERANCE = 0.01;
@@ -730,7 +730,7 @@ SERIAL_NUMBER = 1279-14610-0008;
 FIELD_INTEGRAL_COEFFICIENTS =  0.108559782608696, 0.0;
 MAGNETIC_LENGTH = 182.327586206896;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-VCOR-09:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-09:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 RI_TOLERANCE = 0.01;
@@ -749,7 +749,7 @@ SERIAL_NUMBER = 1279-14610-0009;
 FIELD_INTEGRAL_COEFFICIENTS =  0.108940217, 0.0;
 MAGNETIC_LENGTH = 182.9665314;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-VCOR-10:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-10:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 RI_TOLERANCE = 0.01;
@@ -768,7 +768,7 @@ SERIAL_NUMBER = 1279-14610-0007;
 FIELD_INTEGRAL_COEFFICIENTS =  0.109396135, 0.0;
 MAGNETIC_LENGTH = 182.2535211;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
-PV_ROOT = EBT-INJ-MAG-VCOR-11:;
+PV_ROOT = VM-EBT-INJ-MAG-VCOR-11:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
 RI_TOLERANCE = 0.01;
@@ -793,7 +793,7 @@ SERIAL_NUMBER = EBTFQ2M05;
 FIELD_INTEGRAL_COEFFICIENTS = -2.28625597225573E-05, 0.000310696398249702, 0.103519837397042, 0.00104459623600727;
 MAGNETIC_LENGTH = 125.223958037202;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-05:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-05:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -811,7 +811,7 @@ SERIAL_NUMBER = EBTFQ2M02;
 FIELD_INTEGRAL_COEFFICIENTS = -3.77887463072432E-05, 0.000518011967842953, 0.102826208113528, 0.00197957472695541;
 MAGNETIC_LENGTH = 125.033079276906;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-06:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-06:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -830,7 +830,7 @@ SERIAL_NUMBER = EBTFQ2M03;
 FIELD_INTEGRAL_COEFFICIENTS = -1.51802828278694E-05, 0.000208236492203741, 0.102224127676636, 0.00205656183129602;
 MAGNETIC_LENGTH = 125.299909233924;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-07:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-07:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -847,7 +847,7 @@ SERIAL_NUMBER = EBTFQ2M01;
 FIELD_INTEGRAL_COEFFICIENTS = -3.06357099595939E-05, 0.000442533546326552, 0.101577009522434, 0.00146589509380893;
 MAGNETIC_LENGTH = 125.27558356645;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-08:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-08:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -864,7 +864,7 @@ SERIAL_NUMBER = EMDQM06;
 FIELD_INTEGRAL_COEFFICIENTS = 0.111939163037871, -0.00132252769474545;
 MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-09:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-09:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -881,7 +881,7 @@ SERIAL_NUMBER = EMDQM05;
 FIELD_INTEGRAL_COEFFICIENTS = 0.111966157109812, -0.00170732356716569;
 MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-10:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-10:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -898,7 +898,7 @@ SERIAL_NUMBER = EMDQM02;
 FIELD_INTEGRAL_COEFFICIENTS = 0.112072763436341, -0.00182025848896622;
 MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-11:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-11:;
 MAG_TYPE = QUAD;
 NUM_ILOCKS = 6;
 RI_TOLERANCE = 0.001;
@@ -917,7 +917,7 @@ SERIAL_NUMBER = EMIQM04;
 FIELD_INTEGRAL_COEFFICIENTS = 1.58996386665694, 6.76912235527686E-05;
 MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Injection line\SCX Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-12:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-12:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -935,7 +935,7 @@ SERIAL_NUMBER = EBTFQ2M06;
 FIELD_INTEGRAL_COEFFICIENTS = -2.87186700627592E-05, 0.000391071197622624, 0.103186587329201, 0.00109631338038853;
 MAGNETIC_LENGTH = 125.299909233924;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-13:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-13:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -953,7 +953,7 @@ SERIAL_NUMBER = EMIQM05;
 FIELD_INTEGRAL_COEFFICIENTS = 1.59235070995081, -0.022877181714572;
 MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Injection line\SCX Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-14:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-14:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -970,7 +970,7 @@ SERIAL_NUMBER = EMDQM08;
 FIELD_INTEGRAL_COEFFICIENTS = 0.111954754, -0.001381788;
 MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements";
-PV_ROOT = EBT-INJ-MAG-QUAD-15:;
+PV_ROOT = VM-EBT-INJ-MAG-QUAD-15:;
 MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -992,7 +992,7 @@ SERIAL_NUMBER = 13257;
 FIELD_INTEGRAL_COEFFICIENTS = -9.5201E-07, 0.000151557, 0.894506059, 0.126202232;
 MAGNETIC_LENGTH = 397.752;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Dipoles\Type 2";
-PV_ROOT = CLA-C2V-MAG-DIP-02:;
+PV_ROOT = VM-CLA-C2V-MAG-DIP-02:;
 MAG_TYPE = DIP;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.001; ???
@@ -1016,7 +1016,7 @@ SERIAL_NUMBER = EBTFDIM01;
 FIELD_INTEGRAL_COEFFICIENTS = -0.00038343, 0.002868828, 8.075456266, -0.299379231;
 MAGNETIC_LENGTH = 413.824;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-DIP-02:;
+PV_ROOT = VM-EBT-INJ-MAG-DIP-02:;
 MAG_TYPE = DIP;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
@@ -1037,7 +1037,7 @@ SERIAL_NUMBER = EBTFDIM03;
 FIELD_INTEGRAL_COEFFICIENTS = -0.002065291, 0.037340159, 7.863201936, 0.211661623;
 MAGNETIC_LENGTH = 414.409;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
-PV_ROOT = EBT-INJ-MAG-DIP-03:;
+PV_ROOT = VM-EBT-INJ-MAG-DIP-03:;
 MAG_TYPE = DIP;
 RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
