--- a/Config/CLARA_HRRG_LLRF.config
+++ b/Config/CLARA_HRRG_LLRF.config
@@ -94,7 +94,7 @@ NUMBER_OF_OBJECTS = 1;
 NUMBER_OF_ILOCKS  = 0;   
 
 NAME    = CLA-HRRG-LLRF;
-PV_ROOT = CLA-GUN-LRF-CTRL-01:;    
+PV_ROOT = VM-CLA-GUN-LRF-CTRL-01:;    
 LLRF_MAX_AMPLITUDE = 1000; maximum amplitude that the controller can apply, for additionaly saftey this could be compiled in at source... 
 LLRF_PHI_CALIBRATION = 1.00;        llrf phi to degrees 
 LLRF_AMP_CALIBRATION = 1.00;   1/29.016 llrf amplitiude to MV/m in cavity 
