--- a/Config/claraLinac01LLRF.config
+++ b/Config/claraLinac01LLRF.config
@@ -51,7 +51,7 @@ NUMBER_OF_OBJECTS = 1;      For sanity checks
 NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects, then redefine this before the "name" paramater
 
 NAME    = L01-LLRF;
-PV_ROOT = CLA-GUN:;
+PV_ROOT = VM-CLA-GUN:;
 LLRF_MAX_AMPLITUDE = 2200; maximum amplitude that the controller can apply, for additionaly saftey this could be compiled in at source... 
 LLRF_PHI_CALIBRATION = 1.01;        llrf phi to degrees 
 LLRF_AMP_CALIBRATION = 0.0344637;   1/29.016 llrf amplitiude to MV/m in cavity 
