--- a/Config/claraPH1Charge.config
+++ b/Config/claraPH1Charge.config
@@ -32,11 +32,11 @@ NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects,
 #scop2 is the second one in the list etc.
 
 NAME    = WCM;
-PV_ROOT = CLA-S01-DIA-WCM-01;
+PV_ROOT = VM-CLA-S01-DIA-WCM-01;
 DIAG_TYPE = WCM;
 
 NAME    = S02-FCUP;
-PV_ROOT = CLA-S02-DIA-FCUP-01;
+PV_ROOT = VM-CLA-S02-DIA-FCUP-01;
 DIAG_TYPE = S02-FCUP;
 
 END_OF_DATA;
