--- a/Config/claraPH1Screens.config
+++ b/Config/claraPH1Screens.config
@@ -159,7 +159,7 @@ NUMBER_OF_ILOCKS = 0;		#If the number of interlocks changes between objects, the
 #however it solved the problem of the program not subscribing to the chids in the new version.
 
 NAME = S01-SCR-01;
-PV_ROOT = CLA-S01-DIA-SCR-01:;
+PV_ROOT = VM-CLA-S01-DIA-SCR-01:;
 SCREEN_TYPE = CLARA_HV_MOVER;
 V_RETRACTED = 0;
 V_RETRACTED_POS = 0;
@@ -188,7 +188,7 @@ H_APT_3_POS = 197.3;
 POSITION = 0.9810;
 
 NAME = S02-SCR-01;
-PV_ROOT = CLA-S02-DIA-SCR-01:;
+PV_ROOT = VM-CLA-S02-DIA-SCR-01:;
 SCREEN_TYPE = CLARA_HV_MOVER;
 V_RETRACTED = 0;
 V_RETRACTED_POS = 0;
@@ -207,7 +207,7 @@ H_SLIT_1_POS = 46.2;
 POSITION = 4.0899;
 
 NAME = S02-SCR-02;
-PV_ROOT = CLA-S02-DIA-SCR-02:;
+PV_ROOT = VM-CLA-S02-DIA-SCR-02:;
 SCREEN_TYPE = CLARA_V_MOVER;
 V_RETRACTED = 0;
 V_RETRACTED_POS = 0;
