--- a/Config/claraPH1VacuumValve.config
+++ b/Config/claraPH1VacuumValve.config
@@ -39,12 +39,12 @@ NUMBER_OF_ILOCKS  = 7;      If the number of interlocks changes between objects,
 ##name must come first before other factors
 
 NAME    = S01-VALV-01;
-PV_ROOT = CLA-S01-VAC-VALV-01:;
+PV_ROOT = VM-CLA-S01-VAC-VALV-01:;
 
 NAME    = S02-VALV-01;
-PV_ROOT = CLA-S02-VAC-VALV-01:;
+PV_ROOT = VM-CLA-S02-VAC-VALV-01:;
 
 NAME    = C2V-VALV-01;
-PV_ROOT = CLA-C2V-VAC-VALV-01:;
+PV_ROOT = VM-CLA-C2V-VAC-VALV-01:;
 
 END_OF_DATA;
