--- a/Config/claraS01VacuumValve.config
+++ b/Config/claraS01VacuumValve.config
@@ -39,6 +39,6 @@ NUMBER_OF_ILOCKS  = 16;      If the number of interlocks changes between objects
 #name must come first before other factors#
 
 NAME    = VALV01;
-PV_ROOT = CLA-S01-VAC-VALV-01:;
+PV_ROOT = VM-CLA-S01-VAC-VALV-01:;
 
 END_OF_DATA;
