--- a/Config/claraS02VacuumValve.config
+++ b/Config/claraS02VacuumValve.config
@@ -39,6 +39,6 @@ NUMBER_OF_ILOCKS  = 1;      If the number of interlocks changes between objects,
 #name must come first before other factors
 
 NAME    = VALV01;
-PV_ROOT = CLA-S02-VAC-VALV-01:;
+PV_ROOT = VM-CLA-S02-VAC-VALV-01:;
 
 END_OF_DATA;
