--- a/Config/pnuematicScreen.config
+++ b/Config/pnuematicScreen.config
@@ -2,7 +2,7 @@
 
 
 NAME = INJ-SCR-04;
-PV_ROOT = EBT-INJ-DIA-SCR-04:;
+PV_ROOT = VM-EBT-INJ-DIA-SCR-04:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
@@ -10,7 +10,7 @@ YAG = 4;
 YAG_POS = 148.5;
 
 NAME = INJ-SCR-05;
-PV_ROOT = EBT-INJ-DIA-SCR-05:;
+PV_ROOT = VM-EBT-INJ-DIA-SCR-05:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
@@ -18,7 +18,7 @@ YAG = 4;
 YAG_POS = 148.5;
 
 NAME = INJ-SCR-06;
-PV_ROOT = EBT-INJ-DIA-SCR-06:;
+PV_ROOT = VM-EBT-INJ-DIA-SCR-06:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
@@ -26,7 +26,7 @@ YAG = 4;
 YAG_POS = 148.5;
 
 NAME = INJ-SCR-07;
-PV_ROOT = EBT-INJ-DIA-SCR-07:;
+PV_ROOT = VM-EBT-INJ-DIA-SCR-07:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
@@ -34,7 +34,7 @@ YAG = 4;
 YAG_POS = 148.5;
 
 NAME = INJ-SCR-08;
-PV_ROOT = EBT-INJ-DIA-SCR-08:;
+PV_ROOT = VM-EBT-INJ-DIA-SCR-08:;
 SCREEN_TYPE = VELA_PNEUMATIC;
 RETRACTED = 0;
 RETRACTED_POS = 0;
