--- a/Config/velaInvertedMagnetronGauge.config
+++ b/Config/velaInvertedMagnetronGauge.config
@@ -34,36 +34,36 @@ NUMBER_OF_ILOCKS  = 0;
 #img2 is the second one in the list etc.
 
 NAME    = IMG01;
-PV_ROOT = EBT-INJ-VAC-IMG-01:;
+PV_ROOT = VM-EBT-INJ-VAC-IMG-01:;
 
 NAME    = IMG02;
-PV_ROOT = EBT-INJ-VAC-IMG-02:;
+PV_ROOT = VM-EBT-INJ-VAC-IMG-02:;
 
 NAME    = IMG03;
-PV_ROOT = EBT-INJ-VAC-IMG-03:;
+PV_ROOT = VM-EBT-INJ-VAC-IMG-03:;
 
 NAME    = IMG04;
-PV_ROOT = EBT-INJ-VAC-IMG-04:;
+PV_ROOT = VM-EBT-INJ-VAC-IMG-04:;
 
 NAME    = IMG05;
-PV_ROOT = EBT-INJ-VAC-IMG-05:;
+PV_ROOT = VM-EBT-INJ-VAC-IMG-05:;
 
 NAME    = IMG06;
-PV_ROOT = EBT-INJ-VAC-IMG-06:;
+PV_ROOT = VM-EBT-INJ-VAC-IMG-06:;
 
 NAME    = IMG07;
-PV_ROOT = EBT-INJ-VAC-IMG-07:;
+PV_ROOT = VM-EBT-INJ-VAC-IMG-07:;
 
 NAME    = IMG08;
-PV_ROOT = EBT-INJ-VAC-IMG-08:;
+PV_ROOT = VM-EBT-INJ-VAC-IMG-08:;
 
 NAME    = IMG09;
-PV_ROOT = EBT-INJ-VAC-IMG-09:;
+PV_ROOT = VM-EBT-INJ-VAC-IMG-09:;
 
 NAME    = IMG10;
-PV_ROOT = EBT-INJ-VAC-IMG-10:;
+PV_ROOT = VM-EBT-INJ-VAC-IMG-10:;
 
 NAME    = IMG11;
-PV_ROOT = EBT-INJ-VAC-IMG-11:;
+PV_ROOT = VM-EBT-INJ-VAC-IMG-11:;
 
 END_OF_DATA;
